1575945028 | 93 files | M bin/version.txt,  M drivers/lighthouse/resources/webinterface/localization/lighthouse_web_brazilian.json,  M drivers/lighthouse/resources/webinterface/localization/lighthouse_web_schinese.json,  M drivers/lighthouse/resources/webinterface/pairing.html,  M drivers/lighthouse/resources/webinterface/pairing.js,  M resources/config/vrcompositor_actions_pt_BR.json,  M resources/overlay_pointer_ibeam.png,  M resources/webinterface/dashboard/bindingcallouts.html,  M resources/webinterface/dashboard/bindingcallouts.js,  M resources/webinterface/dashboard/controllerbinding.html,  M resources/webinterface/dashboard/controllerbindingui.js,  M resources/webinterface/dashboard/debugcommands.html,  M resources/webinterface/dashboard/debugcommands.js,  M resources/webinterface/dashboard/fallback.html,  M resources/webinterface/dashboard/fallback.js,  M resources/webinterface/dashboard/keyboard.html,  M resources/webinterface/dashboard/keyboard.js,  M resources/webinterface/dashboard/localization/bindingui_brazilian.json,
https://steamdb.info/patchnotes/4476085/

--- a/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_brazilian.json
+++ b/drivers/lighthouse/resources/webinterface/localization/lighthouse_web_brazilian.json
@@ -1,38 +1,38 @@
 {
-	"language": "english",
+	"language": "brazilian",
 	"pairing_start_failed_title": "Falha ao parear",
 	"pairing_start_failed_desc": "Não foi possível iniciar o pareamento.",
-	"pairing_initializing_title": "Initializing",
+	"pairing_initializing_title": "Inicializando",
 	"pairing_initializing_desc": "Buscando aparelho de RV.",
 	"pairing_initializing_instr": "Confirme que o headset está conectado ou os adaptadores sem fio estão conectados e ligados.",
 	"pairing_nofreedongles_title": "Parear controle",
 	"pairing_nofreedongles_desc": "Parece que os controles já estão conectados!",
 	"pairing_nofreedongles_instr": "Para parear um controle novo, <span class=\"Highlight\">desligue um dos controles existentes</span>.",
-	"pairing_nodongles_title": "No pairable devices detected",
-	"pairing_nodongles_desc": "O SteamVR não encontrou um aparelho ao qual parear os controles.",
+	"pairing_nodongles_title": "Nenhum dispositivo emparelhável detectado",
+	"pairing_nodongles_desc": "O SteamVR não encontrou um aparelho com o qual parear os controles.",
 	"pairing_nodongles_instr": "Confirme que o headset está conectado.",
 	"pairing_selectdevice_title": "Selecione o tipo do controle",
-	"pairingdevice_knuckles_controllername": "Index Controller",
-	"pairingdevice_vivewand_shortname": "Controle HTC Vice",
+	"pairingdevice_knuckles_controllername": "Controle do Valve Index",
+	"pairingdevice_vivewand_shortname": "Controle HTC Vive",
 	"pairingdevice_vivetracker_shortname": "Rastreador HTC Vive",
-	"pairingdevice_a_knuckles_controllername": "an Index Controller",
+	"pairingdevice_a_knuckles_controllername": "um controle do Valve Index",
 	"pairingdevice_a_vivewand_shortname": "um Controle HTC Vive",
 	"pairingdevice_a_vivetracker_shortname": "um Rastreador HTC Vive",
 	"pair_controller_title": "Parear %1$s",
-	"pairinginstructions_generic_desc": "Place your controller into pairing mode",
+	"pairinginstructions_generic_desc": "Coloque o seu controle no modo de emparelhamento",
 	"pairsuccess_title": "Sucesso!",
 	"pairsuccess_desc": "O controle foi conectado.",
-	"pairing_button_system": "System button",
-	"pairing_button_menu": "Menu button",
-	"pairing_button_b": "B button",
+	"pairing_button_system": "Botão System",
+	"pairing_button_menu": "Botão Menu",
+	"pairing_button_b": "Botão B",
 	"pairing_knuckles_instructions_press": "Segure %1$s e %2$s até que a luz do controle comece a piscar azul...",
 	"pairing_tracker_instructions_press": "Segure %1$s até que a luz do rastreador comece a piscar azul...",
 	"pairing_button_differentcontroller": "Desejo parear outro tipo de controle...",
 	"pairing_button_done": "OK",
 	"pairing_button_cancel": "Cancelar",
 	"pairing_success_again": "Parear outro controle...",
-	"pairing_try_again": "Try again...",
-	"pairing_error_title": "Something went wrong",
-	"pairing_timed_out_desc": "The controller timed out.",
+	"pairing_try_again": "Tentar novamente...",
+	"pairing_error_title": "Ocorreu um erro",
+	"pairing_timed_out_desc": "Esgotou-se o tempo de espera do controle.",
 	"DummyEntryToConsumeComma": "DummyEntryToConsumeComma"
 }
