--- a/resources/webinterface/dashboard/localization/bindingui_bulgarian.json
+++ b/resources/webinterface/dashboard/localization/bindingui_bulgarian.json
@@ -32,6 +32,7 @@
   "SourceInputMode_Position": "Позиция",
   "SourceInputMode_Pull": "Издърпване",
   "SourceInputMode_Force": "Сила",
+  "SourceInputMode_Proximity": "Близост",
   "SourceInputMode_Edit": "Редактиране",
   "SourceInputMode_AddMode": "Добавяне",
   "SourceInputMode_Delete": "Изтриване",
@@ -102,8 +103,8 @@
   "SourceInputMode_ButtonModeInputForce_Click": "Генериране на кликване от:",
   "SourceInputMode_Grab": "Грабване",
   "SourceInputMode_CapsenseEnableThreshold": "Праг за включване на CapSense:",
-  "SourceInputMode_ValueHoldThreshold": "Праг за стойността на задържане:",
-  "SourceInputMode_ValueReleaseThreshold": "Праг за стойността на освобождаване:",
+  "SourceInputMode_GrabThreshold": "Праг за грабване:",
+  "SourceInputMode_ReleaseThreshold": "Праг за освобождаване:",
   "SourceInputMode_ForceHoldThreshold": "Праг за сила на задържане:",
   "SourceInputMode_ForceReleaseThreshold": "Праг за сила на освобождаване:",
   "SourceInputMode_DowngradeSpeed": "Понижаване на скоростта:",
@@ -281,10 +282,14 @@
   "TrackerEditor_SelectControllerRole": "Кои ръце:",
   "DisplaySettings_Title": "Екранни настройки",
   "DisplaySettings_DisplayBrightness": "Яркост на екрана",
+  "DisplaySettings_IndexColumnCorrection": "Index Display Column Correction",
   "DisplaySettings_ColumnCorrection": "Корекция на колоната",
   "DisplaySettings_ColumnCorrectionDesc": "Корекцията на колоната смекчава вертикалния ефект за гледане през „врата с мрежа“ по време на движения от главата. Повечето потребители би трябвало да го оставят включено с фина корекция от 0.",
+  "DisplaySettings_ColumnCorrectionEdit": "Edit",
   "DisplaySettings_Error_FirmwareUpdateNeeded": "Изисква се обновяване на фърмуера, така че да включите персонализациите за екранните настройки.",
   "DisplaySettings_EnableColumnCorrection": "Корекция на колоната",
+  "DisplaySettings_ColumnCorrectionOff": "Off",
+  "DisplaySettings_ColumnCorrectionAuto": "Auto",
   "DisplaySettings_AdvancedSettings": "Разширени настройки",
   "DisplaySettings_ShowAdvancedSettings": "Показване на разширени настройки",
   "DisplaySettings_HideAdvancedSettings": "Скриване на разширени настройки",
