--- a/resources/webinterface/dashboard/localization/bindingui_czech.json
+++ b/resources/webinterface/dashboard/localization/bindingui_czech.json
@@ -32,6 +32,7 @@
   "SourceInputMode_Position": "Pozice",
   "SourceInputMode_Pull": "Tažení",
   "SourceInputMode_Force": "Síla",
+  "SourceInputMode_Proximity": "Vzdálenost",
   "SourceInputMode_Edit": "Upravit",
   "SourceInputMode_AddMode": "Přidat",
   "SourceInputMode_Delete": "Odstranit",
@@ -102,8 +103,8 @@
   "SourceInputMode_ButtonModeInputForce_Click": "Generovat stisknutí z:",
   "SourceInputMode_Grab": "Chycení",
   "SourceInputMode_CapsenseEnableThreshold": "Práh aktivace CapSense:",
-  "SourceInputMode_ValueHoldThreshold": "Práh hodnoty podržení",
-  "SourceInputMode_ValueReleaseThreshold": "Práh hodnoty puštění",
+  "SourceInputMode_GrabThreshold": "Práh stisku:",
+  "SourceInputMode_ReleaseThreshold": "Práh puštění:",
   "SourceInputMode_ForceHoldThreshold": "Síla prahu podržení",
   "SourceInputMode_ForceReleaseThreshold": "Síla prahu puštění",
   "SourceInputMode_DowngradeSpeed": "Rychlost klesání hodnoty:",
@@ -281,10 +282,14 @@
   "TrackerEditor_SelectControllerRole": "Vybrané ruce:",
   "DisplaySettings_Title": "Nastavení displejů",
   "DisplaySettings_DisplayBrightness": "Jas displejů",
+  "DisplaySettings_IndexColumnCorrection": "Index Display Column Correction",
   "DisplaySettings_ColumnCorrection": "Sloupcová korekce",
   "DisplaySettings_ColumnCorrectionDesc": "Sloupcová korekce zmírňuje svislý efekt „sítě“ pixelů při pohybu hlavou. Většina uživatelů by měla tuto možnost nechat povolenou a maximálně ji jemně upravit.",
+  "DisplaySettings_ColumnCorrectionEdit": "Edit",
   "DisplaySettings_Error_FirmwareUpdateNeeded": "Pro možnost změny nastavení displejů je vyžadována aktualizace firmwaru.",
   "DisplaySettings_EnableColumnCorrection": "Sloupcová korekce",
+  "DisplaySettings_ColumnCorrectionOff": "Off",
+  "DisplaySettings_ColumnCorrectionAuto": "Auto",
   "DisplaySettings_AdvancedSettings": "Pokročilá nastavení",
   "DisplaySettings_ShowAdvancedSettings": "Zobrazit pokročilá nastavení",
   "DisplaySettings_HideAdvancedSettings": "Skrýt pokročilá nastavení",
