--- a/resources/webinterface/dashboard/localization/bindingui_finnish.json
+++ b/resources/webinterface/dashboard/localization/bindingui_finnish.json
@@ -32,6 +32,7 @@
   "SourceInputMode_Position": "Sijainti",
   "SourceInputMode_Pull": "Vedä",
   "SourceInputMode_Force": "Pakota",
+  "SourceInputMode_Proximity": "Läheisyys",
   "SourceInputMode_Edit": "Muokkaa",
   "SourceInputMode_AddMode": "Lisää",
   "SourceInputMode_Delete": "Poista",
@@ -96,14 +97,14 @@
   "SourceInputMode_DiscreteScroll_Joystick_Deadzone_Vertical": "Kuollut alue (vertikaalinen):",
   "SourceInputMode_InvertYAxis": "Käännä Y-akseli:",
   "SourceInputMode_InvertXAxis": "Käännä X-akseli:",
-  "SourceInputMode_StickyClick": "Keep thumbstick clicked while stick is deflected",
-  "SourceInputMode_StickyClick_Activate": "Deflection activation threshold",
-  "SourceInputMode_StickyClick_Deactivate": "Deflection deactivation threshold",
+  "SourceInputMode_StickyClick": "Pidä ohjainsauva klikattuna, kun sauva on suunnattu ulospäin",
+  "SourceInputMode_StickyClick_Activate": "Ulospäin suunnatun sauvan aktivoinnin raja-arjo",
+  "SourceInputMode_StickyClick_Deactivate": "Ulospäin suunnatun sauvan aktivoinnin poiston raja-arjo",
   "SourceInputMode_ButtonModeInputForce_Click": "Luo klikkaus:",
   "SourceInputMode_Grab": "Nappaa",
   "SourceInputMode_CapsenseEnableThreshold": "Capsensen käyttämä raja-arvo:",
-  "SourceInputMode_ValueHoldThreshold": "Pidon raja-arvo:",
-  "SourceInputMode_ValueReleaseThreshold": "Pidosta vapauttamisen raja-arvo:",
+  "SourceInputMode_GrabThreshold": "Tarttumisen raja-arvo:",
+  "SourceInputMode_ReleaseThreshold": "Vapauttamisen raja-arvo:",
   "SourceInputMode_ForceHoldThreshold": "Puristusvoiman raja-arvo:",
   "SourceInputMode_ForceReleaseThreshold": "Puristuksen vapauttamisen raja-arvo:",
   "SourceInputMode_DowngradeSpeed": "Tasonlaskun nopeus:",
@@ -123,13 +124,13 @@
   "SourceInputMode_MoreOptions": "Lisäasetukset",
   "SourceInputMode_FewerOptions": "Vähemmän vaihtoehtoja",
   "SourceInputAction_none": "Ei mitään",
-  "SourceInputAction_NoItems": "None in action set",
+  "SourceInputAction_NoItems": "Ei mitään toimintosarjassa",
   "SourceInputSubHeader_BooleanActions": "Boolen toiminnot",
   "SourceInputSubHeader_Vector1Actions": "Vektori 1:n toiminnot",
   "SourceInputSubHeader_Vector2Actions": "Vektori 2:n toiminnot",
   "SourceInputSubHeader_Vector3Actions": "Vektori 3:n toiminnot",
-  "SourceInputSubHeader_SkeletonActions": "Skeleton Actions",
-  "SourceInputSubHeader_PoseActions": "Pose Actions",
+  "SourceInputSubHeader_SkeletonActions": "Luuston liikkeet",
+  "SourceInputSubHeader_PoseActions": "Asentoliikkeet",
   "SourceInputSubHeader_HapticsActions": "Haptiset toiminnot",
   "BindingUI_PoseTitle": "Asentomääritykset",
   "BindingUI_HapticsTitle": "Haptiikan määritykset",
@@ -216,13 +217,13 @@
   "BindingUI_SaveBinding": "Tallenna",
   "BindingUI_SaveDefaultName": "Ohjaintyyppi %2$s pelille %1$s",
   "BindingUI_SaveDefaultName_Personal": "Ohjaintyyppi %2$s pelille %1$s",
-  "BindingUI_SaveDefaultName_Public": "Shared binding from %1$s",
+  "BindingUI_SaveDefaultName_Public": "Jaetut määritykset kohteelta %1$s",
   "BindingUI_SaveDescriptionPlaceholder": "(Valinnainen)",
   "BindingUI_SelectThisBinding": "Valitse määritys",
   "BindingUI_EditThisBinding": "Muokkaa määritystä",
   "BindingUI_ImportThisBinding": "Tuo tämä määritys",
-  "BindingUI_List_OldVersionWarning": "These bindings were made with an older version of %1$s and need to be updated.",
-  "BindingUI_List_OldVersionWarning_CurrentBinding": "These bindings were made with an older version of %1$s and may not include all necessary actions.",
+  "BindingUI_List_OldVersionWarning": "Nämä määritykset on tehty sovelluksen %1$s vanhemmalla versiolla, ja ne pitää päivittää.",
+  "BindingUI_List_OldVersionWarning_CurrentBinding": "Nämä määritykset on tehty sovelluksen %1$s vanhemmalla versiolla, ja niissä ei ehkä ole kaikki tarvittavia toimintoja.",
   "BindingUI_SelectAction_Required": "Pakollinen",
   "BindingUI_SelectAction_Suggested": "Ehdotettu",
   "SaveError_BindingWriteFailed": "Määritystiedoston kirjoitus epäonnistui. Onko se kirjoitussuojattu?",
@@ -234,7 +235,7 @@
   "AppSelect_CompositorName": "SteamVR-työpöytä",
   "AppSelect_CoreSteamVRApps": "SteamVR-ydinsovellukset",
   "AppSelect_ControllerTester": "Testaa ohjainta",
-  "AppSelect_LegacyDebug": "Debug Legacy Input",
+  "AppSelect_LegacyDebug": "Yhteensopivuussyötteen vianratkaisu",
   "AppSelect_ShowMoreApps": "Näytä lisää sovelluksia",
   "AppSelect_EditBindings": "Muokkaa ohjaimen määrityksiä",
   "BindingList_PageTitle": "Muuta pelin %1$s määritykset",
@@ -242,8 +243,8 @@
   "BindingUI_List_Delete_Confirm": "Poistatko pysyvästi määrityksen %1$s?",
   "BindingUI_ConfirmSelect_Title": "Korvataanko oletusasetus?",
   "BindingUI_List_Select_Confirm": "Nykyisten määritysten muutoksia ei ole tallennettu. Haluatko hylätä vai tallentaa muutokset omina määrityksinä ennen näiden asetusten käyttämistä?",
-  "BindingUI_List_Select_Confirm_Convert": "You also have unsaved changes for your current binding. Updating this binding will discard those changes, or you can save them as a personal bind before updating this bind?",
-  "BindingUI_List_Upgrade_Confirm": "This binding is from a previous version of %1$s. You may need to bind additional actions in order to make it work.",
+  "BindingUI_List_Select_Confirm_Convert": "Nykyisten määritysten muutoksia ei ole tallennettu. Tämän määrityksen päivittäminen hylkää nämä muutokset, tai voit tallentaa muutokset omina määrityksinä ennen näiden asetusten päivittämistä?",
+  "BindingUI_List_Upgrade_Confirm": "Tämä määritys on pelin %1$s aiemmalle versiolle. Sinun pitää ehkä määrittää lisätoimintoja, jotta tämä toimii.",
   "BindingUI_List_Developer_Binding_Title": "Pelin %1$s viralliset määritykset",
   "BindingUI_List_Developer_Binding_Description": "Pelin kehittäjä on julkaissut nämä viralliset määritykset",
   "BindingUI_List_Legacy_Binding_Title": "Pelin %1$s oletusmääritykset",
@@ -252,12 +253,12 @@
   "BindingUI_List_Autosave": "%1$s (paikalliset muutokset)",
   "BindingList_TrackerEdit": "Hallinnoi trackereita",
   "Button_Import": "Tuo",
-  "PreservedAutosaveName": "Preserved local changes before upgrade",
+  "PreservedAutosaveName": "Säilytetyt paikalliset muutokset ennen päivitystä",
   "BindingUI_SteamVRUnavailable": "Käynnistä SteamVR jatkaaksesi määrityskäyttöliittymän käyttöä",
   "BindingUI_ErrorLoadingBindingTitle": "Määritystiedoston lataus epäonnistui",
   "input_binding_load_failed": "Pelin %1$s syötemääritysten lataaminen epäonnistui. Valitse toinen määritysvaihtoehto.",
   "input_binding_load_failed_no_url": "Syötteen %1$s asetusta %2$s ei määritetty. Luo uusi tai valitse olemassaoleva määritysvaihtoehto luettelosta.",
-  "input_binding_load_below_minimum_version": "%2$s binding for %1$s was from older version of %1$s. Your bindings have been set back to the default.",
+  "input_binding_load_below_minimum_version": "Ohjaimen %2$s määritykset pelille %1$s olivat pelin %1$s vanhemmalle versiolle. Määrityksesi on palautettu oletusasetuksiin.",
   "unknown_application": "Tuntematon sovellus",
   "TestController_Title": "Testaa ohjaimia",
   "InputDebugger_Title": "Syötteen virheenkorjaus",
@@ -281,16 +282,20 @@
   "TrackerEditor_SelectControllerRole": "Kumpi käsi? ",
   "DisplaySettings_Title": "Näyttöasetukset",
   "DisplaySettings_DisplayBrightness": "Näytön kirkkaus",
+  "DisplaySettings_IndexColumnCorrection": "Index Display Column Correction",
   "DisplaySettings_ColumnCorrection": "Pikselisarakkeen korjaus",
-  "DisplaySettings_ColumnCorrectionDesc": "Column Correction mitigates vertical \"screendoor\" during head motion. Most users should leave it enabled, with fine adjustment of 0.",
-  "DisplaySettings_Error_FirmwareUpdateNeeded": "A firmware update is required to enable Display Settings customizations.",
+  "DisplaySettings_ColumnCorrectionDesc": "Pikselisarakkeen korjaus pienentää pystysuuntaista screen door -efektiä pään liikkeiden aikaan. Suurimman osan käyttäjistä kannattaa jättä tämä päälle, hienosäätöasetuksella 0.",
+  "DisplaySettings_ColumnCorrectionEdit": "Edit",
+  "DisplaySettings_Error_FirmwareUpdateNeeded": "Laiteohjelmiston päivitys vaaditaan, jotta näyttöasetuksia voi muokata.",
   "DisplaySettings_EnableColumnCorrection": "Pikselisarakkeen korjaus",
+  "DisplaySettings_ColumnCorrectionOff": "Off",
+  "DisplaySettings_ColumnCorrectionAuto": "Auto",
   "DisplaySettings_AdvancedSettings": "Lisäasetukset",
   "DisplaySettings_ShowAdvancedSettings": "Näytä lisäasetukset",
   "DisplaySettings_HideAdvancedSettings": "Piilota lisäasetukset",
   "DisplaySettings_ResetAdvancedSettings": "Käytä suositeltuja lisäasetuksia",
-  "DisplaySettings_ColumnCorrectionBiasLeft": "Fine Adjustment (Left)",
-  "DisplaySettings_ColumnCorrectionBiasRight": "Fine Adjustment (Right)",
+  "DisplaySettings_ColumnCorrectionBiasLeft": "Hienosäätöasetus (vasen)",
+  "DisplaySettings_ColumnCorrectionBiasRight": "Hienosäätöasetus (oikea)",
   "DisplaySettings_ColumnCorrectionBiasLinked": "Linkitetty",
   "SaveNotice_Saving": "Tallentaa...",
   "SaveNotice_Uploading": "Lataa...",
@@ -309,19 +314,19 @@
   "TrackpadClickRight": "Oikea kosketuslevy",
   "TrackpadClickNone": "Valitse kosketuslevy",
   "SecondaryControllerTab": "Lisäasetukset",
-  "SecondaryController_ReturnWithLeftHand": "Return bindings with left hand",
-  "SecondaryController_ReturnWithRightHand": "Return bindings with right hand",
-  "SecondaryController_ReturnWithHead": "Return bindings with HMD",
+  "SecondaryController_ReturnWithLeftHand": "Palauta määritykset vasemmalle kädelle",
+  "SecondaryController_ReturnWithRightHand": "Palauta määritykset oikealle kädelle",
+  "SecondaryController_ReturnWithHead": "Palauta määritykset virtuaalitodellisuuslaseille",
   "Settings_ThumbstickDeadzone_Text": "Ohjainsauvan kuollut alue:",
   "Settings_ControllerSettings_Title": "Ohjainsauvan asetukset",
-  "Settings_ControllerSettings_Utilities": "Controller Utilities",
+  "Settings_ControllerSettings_Utilities": "Ohjaintyökalut",
   "Settings_General_Cancel": "Peruuta",
   "Settings_General_Confirm": "Vahvista",
   "Settings_General_CalibrateThumbstick": "Kalibroi",
-  "Settings_General_NotEnoughSamples": "Please press up on the thumbstick at least %1$s more times to complete calibration.",
-  "Settings_General_InviteMoreSamples": "Calculated angle of %1$s degrees. Keep pressing up to refine that value or press Confirm to accept this calibration.",
+  "Settings_General_NotEnoughSamples": "Paina ohjainsauvalla ylöspäin vielä vähintään %1$s kertaa suorittaaksesi kalibroinnin loppuun.",
+  "Settings_General_InviteMoreSamples": "Laskettu kulma: %1$s astetta. Jatka ylöspäin painamista, jotta voit säätää kulman arvoa tai hyväksy tämä kalibrointi painamalla \"Hyväksy\".",
   "Settings_General_LeftThumbstickAngle": "Vasemman ohjaimen kulma: %1$s astetta",
   "Settings_General_RightThumbstickAngle": "Oikean ohjaimen kulma: %1$s astetta",
   "Settings_General_Reset": "Nollaa",
-  "LegacyDebugger_NoApp": "Run any legacy input application to see its input data here."
+  "LegacyDebugger_NoApp": "Käynnistä minkä tahansa sovelluksen yhteensopivuussyöte, jotta näet syötetiedot."
 }
