--- a/resources/webinterface/dashboard/localization/bindingui_greek.json
+++ b/resources/webinterface/dashboard/localization/bindingui_greek.json
@@ -32,6 +32,7 @@
   "SourceInputMode_Position": "Θέση",
   "SourceInputMode_Pull": "Τράβηγμα",
   "SourceInputMode_Force": "Δύναμη",
+  "SourceInputMode_Proximity": "Εγγύτητα",
   "SourceInputMode_Edit": "Επεξεργασία",
   "SourceInputMode_AddMode": "Προσθήκη",
   "SourceInputMode_Delete": "Διαγραφή",
@@ -102,8 +103,8 @@
   "SourceInputMode_ButtonModeInputForce_Click": "Δημιουργία κλικ από:",
   "SourceInputMode_Grab": "Άρπαγμα",
   "SourceInputMode_CapsenseEnableThreshold": "Ενεργοποίηση ορίου CapSense:",
-  "SourceInputMode_ValueHoldThreshold": "Όριο τιμής κρατήματος:",
-  "SourceInputMode_ValueReleaseThreshold": "Όριο τιμής απελευθέρωσης:",
+  "SourceInputMode_GrabThreshold": "Όριο αρπαγής:",
+  "SourceInputMode_ReleaseThreshold": "Όριο απελευθέρωσης:",
   "SourceInputMode_ForceHoldThreshold": "Όριο δύναμης κρατήματος:",
   "SourceInputMode_ForceReleaseThreshold": "Όριο δύναμης απελευθέρωσης:",
   "SourceInputMode_DowngradeSpeed": "Ταχύτητα υποβάθμισης:",
@@ -281,10 +282,14 @@
   "TrackerEditor_SelectControllerRole": "Ποια χέρια:",
   "DisplaySettings_Title": "Ρυθμίσεις οθόνης",
   "DisplaySettings_DisplayBrightness": "Φωτεινότητα οθόνης",
+  "DisplaySettings_IndexColumnCorrection": "Index Display Column Correction",
   "DisplaySettings_ColumnCorrection": "Διόρθωση στήλης",
   "DisplaySettings_ColumnCorrectionDesc": "Η διόρθωση στήλης μετριάζει το κάθετο εφέ «πόρτας οθόνης» κατά την κίνηση του κεφαλιού. Οι περισσότεροι χρήστες θα πρέπει να το αφήσουν ενεργό, με λεπτή ρύθμιση στο 0.",
+  "DisplaySettings_ColumnCorrectionEdit": "Edit",
   "DisplaySettings_Error_FirmwareUpdateNeeded": "Απαιτείται μια ενημέρωση υλικολογισμικού για ενεργοποίηση προσαρμογών των ρυθμίσεων προβολής.",
   "DisplaySettings_EnableColumnCorrection": "Διόρθωση στήλης",
+  "DisplaySettings_ColumnCorrectionOff": "Off",
+  "DisplaySettings_ColumnCorrectionAuto": "Auto",
   "DisplaySettings_AdvancedSettings": "Προχωρημένες ρυθμίσεις",
   "DisplaySettings_ShowAdvancedSettings": "Εμφάνιση προχωρημένων ρυθμίσεων",
   "DisplaySettings_HideAdvancedSettings": "Απόκρυψη προχωρημένων ρυθμίσεων",
@@ -311,7 +316,7 @@
   "SecondaryControllerTab": "Επιπλέον ρυθμίσεις",
   "SecondaryController_ReturnWithLeftHand": "Επιστροφή διάταξης με αριστερό χέρι",
   "SecondaryController_ReturnWithRightHand": "Επιστροφή διάταξης με δεξί χέρι",
-  "SecondaryController_ReturnWithHead": "Return bindings with HMD",
+  "SecondaryController_ReturnWithHead": "Επιστροφή δεσμεύσεων με headset",
   "Settings_ThumbstickDeadzone_Text": "Νεκρή ζώνη μοχλού:",
   "Settings_ControllerSettings_Title": "Ρυθμίσεις μοχλού",
   "Settings_ControllerSettings_Utilities": "Δυνατότητες χειριστηρίου",
