--- a/resources/webinterface/dashboard/localization/bindingui_hungarian.json
+++ b/resources/webinterface/dashboard/localization/bindingui_hungarian.json
@@ -32,6 +32,7 @@
   "SourceInputMode_Position": "Helyzet",
   "SourceInputMode_Pull": "Húzás",
   "SourceInputMode_Force": "Erő",
+  "SourceInputMode_Proximity": "Közelség",
   "SourceInputMode_Edit": "Szerkesztés",
   "SourceInputMode_AddMode": "Hozzáadás",
   "SourceInputMode_Delete": "Törlés",
@@ -102,8 +103,8 @@
   "SourceInputMode_ButtonModeInputForce_Click": "Kattintás generálása innen:",
   "SourceInputMode_Grab": "Megragadás",
   "SourceInputMode_CapsenseEnableThreshold": "CapSense bekapcsolási küszöb:",
-  "SourceInputMode_ValueHoldThreshold": "Értéktartási küszöb:",
-  "SourceInputMode_ValueReleaseThreshold": "Értékfeloldási küszöb:",
+  "SourceInputMode_GrabThreshold": "Megfogási küszöb:",
+  "SourceInputMode_ReleaseThreshold": "Elengedési küszöb:",
   "SourceInputMode_ForceHoldThreshold": "Erőtartási küszöb:",
   "SourceInputMode_ForceReleaseThreshold": "Erőfeloldási küszöb:",
   "SourceInputMode_DowngradeSpeed": "Mérséklési sebesség:",
@@ -281,10 +282,14 @@
   "TrackerEditor_SelectControllerRole": "Melyik kezek:",
   "DisplaySettings_Title": "Kijelzőbeállítások",
   "DisplaySettings_DisplayBrightness": "Kijelző fényereje",
+  "DisplaySettings_IndexColumnCorrection": "Index Display Column Correction",
   "DisplaySettings_ColumnCorrection": "Oszlopkorrekció",
   "DisplaySettings_ColumnCorrectionDesc": "Az oszlopkorrekció enyhíti a függőleges „szúnyoghálót” fejmozgáskor. A felhasználók többségének javasolt bekapcsolva, 0 finombeállítási értéken hagyni.",
+  "DisplaySettings_ColumnCorrectionEdit": "Edit",
   "DisplaySettings_Error_FirmwareUpdateNeeded": "A kijelzőbeállítások testre szabásához firmware-frissítés szükséges.",
   "DisplaySettings_EnableColumnCorrection": "Oszlopkorrekció",
+  "DisplaySettings_ColumnCorrectionOff": "Off",
+  "DisplaySettings_ColumnCorrectionAuto": "Auto",
   "DisplaySettings_AdvancedSettings": "Haladó beállítások",
   "DisplaySettings_ShowAdvancedSettings": "Haladó beállítások mutatása",
   "DisplaySettings_HideAdvancedSettings": "Haladó beállítások elrejtése",
