--- a/resources/webinterface/dashboard/localization/bindingui_japanese.json
+++ b/resources/webinterface/dashboard/localization/bindingui_japanese.json
@@ -32,6 +32,7 @@
   "SourceInputMode_Position": "位置",
   "SourceInputMode_Pull": "プル",
   "SourceInputMode_Force": "力量",
+  "SourceInputMode_Proximity": "Proximity",
   "SourceInputMode_Edit": "編集",
   "SourceInputMode_AddMode": "追加",
   "SourceInputMode_Delete": "削除",
@@ -102,8 +103,8 @@
   "SourceInputMode_ButtonModeInputForce_Click": "クリックの生成元：",
   "SourceInputMode_Grab": "つかむ",
   "SourceInputMode_CapsenseEnableThreshold": "CapSense有効化しきい値：",
-  "SourceInputMode_ValueHoldThreshold": "長押しのしきい値：",
-  "SourceInputMode_ValueReleaseThreshold": "リリースのしきい値：",
+  "SourceInputMode_GrabThreshold": "Grab Threshold:",
+  "SourceInputMode_ReleaseThreshold": "Release Threshold:",
   "SourceInputMode_ForceHoldThreshold": "強制長押しのしきい値：",
   "SourceInputMode_ForceReleaseThreshold": "強制リリースのしきい値：",
   "SourceInputMode_DowngradeSpeed": "ダウングレード速度：",
@@ -281,10 +282,14 @@
   "TrackerEditor_SelectControllerRole": "手を選択：",
   "DisplaySettings_Title": "ディスプレイ設定",
   "DisplaySettings_DisplayBrightness": "ディスプレイの明るさ",
+  "DisplaySettings_IndexColumnCorrection": "Index Display Column Correction",
   "DisplaySettings_ColumnCorrection": "列補正",
   "DisplaySettings_ColumnCorrectionDesc": "列補正は、頭を動かす時の垂直の「スクリーンドア効果」を緩和します。ほとんどのユーザーに、微調整値0で有効にしておくことを推奨します。",
+  "DisplaySettings_ColumnCorrectionEdit": "Edit",
   "DisplaySettings_Error_FirmwareUpdateNeeded": "ディスプレイ設定のカスタマイズを有効にするには、ファームウェアの更新が必要です。",
   "DisplaySettings_EnableColumnCorrection": "列補正",
+  "DisplaySettings_ColumnCorrectionOff": "Off",
+  "DisplaySettings_ColumnCorrectionAuto": "Auto",
   "DisplaySettings_AdvancedSettings": "詳細設定",
   "DisplaySettings_ShowAdvancedSettings": "詳細設定を表示",
   "DisplaySettings_HideAdvancedSettings": "詳細設定を非表示",
