--- a/resources/webinterface/dashboard/localization/bindingui_latam.json
+++ b/resources/webinterface/dashboard/localization/bindingui_latam.json
@@ -32,6 +32,7 @@
   "SourceInputMode_Position": "Posición",
   "SourceInputMode_Pull": "Tirar",
   "SourceInputMode_Force": "Fuerza",
+  "SourceInputMode_Proximity": "Proximidad",
   "SourceInputMode_Edit": "Editar",
   "SourceInputMode_AddMode": "Añadir",
   "SourceInputMode_Delete": "Eliminar",
@@ -102,8 +103,8 @@
   "SourceInputMode_ButtonModeInputForce_Click": "Generar clic desde:",
   "SourceInputMode_Grab": "Agarrar",
   "SourceInputMode_CapsenseEnableThreshold": "Límites de Capsense habilitado:",
-  "SourceInputMode_ValueHoldThreshold": "Límites del valor de mantener:",
-  "SourceInputMode_ValueReleaseThreshold": "Límites del valor de soltar:",
+  "SourceInputMode_GrabThreshold": "Umbral de agarre:",
+  "SourceInputMode_ReleaseThreshold": "Umbral de suelta:",
   "SourceInputMode_ForceHoldThreshold": "Límites de la fuerza de mantener:",
   "SourceInputMode_ForceReleaseThreshold": "Límites de la fuerza de soltar:",
   "SourceInputMode_DowngradeSpeed": "Velocidad de degradación:",
@@ -281,10 +282,14 @@
   "TrackerEditor_SelectControllerRole": "Qué manos:",
   "DisplaySettings_Title": "Configuración de pantalla",
   "DisplaySettings_DisplayBrightness": "Brillo de la pantalla",
+  "DisplaySettings_IndexColumnCorrection": "Index Display Column Correction",
   "DisplaySettings_ColumnCorrection": "Corrección de columna",
   "DisplaySettings_ColumnCorrectionDesc": "La corrección de columna mitiga el \"screendoor\" vertical durante el movimiento de la cabeza. La mayoría de los usuarios deberían dejarlo habilitado, con un ajuste fino de 0.",
+  "DisplaySettings_ColumnCorrectionEdit": "Edit",
   "DisplaySettings_Error_FirmwareUpdateNeeded": "Se requiere una actualización de firmware para habilitar las personalizaciones de la configuración de pantalla.",
   "DisplaySettings_EnableColumnCorrection": "Corrección de columna",
+  "DisplaySettings_ColumnCorrectionOff": "Off",
+  "DisplaySettings_ColumnCorrectionAuto": "Auto",
   "DisplaySettings_AdvancedSettings": "Configuración avanzada",
   "DisplaySettings_ShowAdvancedSettings": "Mostrar configuración avanzada",
   "DisplaySettings_HideAdvancedSettings": "Ocultar configuración avanzada",
