--- a/resources/webinterface/dashboard/localization/bindingui_norwegian.json
+++ b/resources/webinterface/dashboard/localization/bindingui_norwegian.json
@@ -32,6 +32,7 @@
   "SourceInputMode_Position": "Posisjon",
   "SourceInputMode_Pull": "Trekk",
   "SourceInputMode_Force": "Kraft",
+  "SourceInputMode_Proximity": "Nærhet",
   "SourceInputMode_Edit": "Rediger",
   "SourceInputMode_AddMode": "Legg til",
   "SourceInputMode_Delete": "Slett",
@@ -102,10 +103,10 @@
   "SourceInputMode_ButtonModeInputForce_Click": "Generer trykk fra:",
   "SourceInputMode_Grab": "Gripe",
   "SourceInputMode_CapsenseEnableThreshold": "Aktiveringsterskel for kapasitiv sensor:",
-  "SourceInputMode_ValueHoldThreshold": "Holdeterskel (verdi):",
-  "SourceInputMode_ValueReleaseThreshold": "Slippterskel (verdi):",
+  "SourceInputMode_GrabThreshold": "Gripeterskel:",
+  "SourceInputMode_ReleaseThreshold": "Slippeterskel:",
   "SourceInputMode_ForceHoldThreshold": "Holdeterskel (kraft):",
-  "SourceInputMode_ForceReleaseThreshold": "Slippterskel (kraft):",
+  "SourceInputMode_ForceReleaseThreshold": "Slippeterskel (kraft):",
   "SourceInputMode_DowngradeSpeed": "Nedgraderingshastighet:",
   "SourceInputMode_DropSpeed": "Dropphastighet:",
   "SourceInputMode_SubMode": "Modus",
@@ -281,10 +282,14 @@
   "TrackerEditor_SelectControllerRole": "Hvilke hender:",
   "DisplaySettings_Title": "Skjerminnstillinger",
   "DisplaySettings_DisplayBrightness": "Skjermlysstyrke",
+  "DisplaySettings_IndexColumnCorrection": "Index Display Column Correction",
   "DisplaySettings_ColumnCorrection": "Kolonnekorrigering",
   "DisplaySettings_ColumnCorrectionDesc": "Kolonnekorrigering reduserer vertikal, nettaktig effekt under hodebevegelse. De fleste brukere bør la den stå på med en finjustering på 0.",
+  "DisplaySettings_ColumnCorrectionEdit": "Edit",
   "DisplaySettings_Error_FirmwareUpdateNeeded": "Det kreves en fastvareoppdatering for å kunne tilpasse skjerminnstillingene.",
   "DisplaySettings_EnableColumnCorrection": "Kolonnekorrigering",
+  "DisplaySettings_ColumnCorrectionOff": "Off",
+  "DisplaySettings_ColumnCorrectionAuto": "Auto",
   "DisplaySettings_AdvancedSettings": "Avanserte innstillinger",
   "DisplaySettings_ShowAdvancedSettings": "Vis avanserte innstillinger",
   "DisplaySettings_HideAdvancedSettings": "Skjul avanserte innstillinger",
