--- a/resources/webinterface/dashboard/localization/bindingui_polish.json
+++ b/resources/webinterface/dashboard/localization/bindingui_polish.json
@@ -32,6 +32,7 @@
   "SourceInputMode_Position": "Pozycja",
   "SourceInputMode_Pull": "Pociągnięcie",
   "SourceInputMode_Force": "Naciśnięcie",
+  "SourceInputMode_Proximity": "Zbliżenie",
   "SourceInputMode_Edit": "Edycja",
   "SourceInputMode_AddMode": "Dodaj",
   "SourceInputMode_Delete": "Usuń",
@@ -102,8 +103,8 @@
   "SourceInputMode_ButtonModeInputForce_Click": "Wygeneruj kliknięcie z:",
   "SourceInputMode_Grab": "Chwycenie",
   "SourceInputMode_CapsenseEnableThreshold": "Próg włączenia CapSense:",
-  "SourceInputMode_ValueHoldThreshold": "Próg wartości przytrzymywania:",
-  "SourceInputMode_ValueReleaseThreshold": "Próg wartości zwolnienia:",
+  "SourceInputMode_GrabThreshold": "Próg chwytu:",
+  "SourceInputMode_ReleaseThreshold": "Próg zwolnienia:",
   "SourceInputMode_ForceHoldThreshold": "Próg nacisku przytrzymywania:",
   "SourceInputMode_ForceReleaseThreshold": "Próg nacisku zwolnienia:",
   "SourceInputMode_DowngradeSpeed": "Szybkość zmniejszenia:",
@@ -281,10 +282,14 @@
   "TrackerEditor_SelectControllerRole": "Które ręce:",
   "DisplaySettings_Title": "Ustawienia ekranu",
   "DisplaySettings_DisplayBrightness": "Jasność ekranu",
+  "DisplaySettings_IndexColumnCorrection": "Index Display Column Correction",
   "DisplaySettings_ColumnCorrection": "Korekcja kolumn",
   "DisplaySettings_ColumnCorrectionDesc": "Korekcja kolumn eliminuje pionowy efekt SDE podczas ruchu głową. Większość użytkowników powinna pozostawić tę opcję włączoną, a wartości precyzyjnego dostrojenia powinny wynosić 0.",
+  "DisplaySettings_ColumnCorrectionEdit": "Edit",
   "DisplaySettings_Error_FirmwareUpdateNeeded": "Do włączenia dostosowywania ustawień ekranu wymagana jest aktualizacja firmware'u.",
   "DisplaySettings_EnableColumnCorrection": "Korekcja kolumn",
+  "DisplaySettings_ColumnCorrectionOff": "Off",
+  "DisplaySettings_ColumnCorrectionAuto": "Auto",
   "DisplaySettings_AdvancedSettings": "Ustawienia zaawansowane",
   "DisplaySettings_ShowAdvancedSettings": "Pokaż ustawienia zaawansowane",
   "DisplaySettings_HideAdvancedSettings": "Ukryj ustawienia zaawansowane",
