--- a/resources/webinterface/dashboard/localization/bindingui_portuguese.json
+++ b/resources/webinterface/dashboard/localization/bindingui_portuguese.json
@@ -32,12 +32,13 @@
   "SourceInputMode_Position": "Posição",
   "SourceInputMode_Pull": "Pressionar",
   "SourceInputMode_Force": "Forçar",
+  "SourceInputMode_Proximity": "Proximidade",
   "SourceInputMode_Edit": "Editar",
   "SourceInputMode_AddMode": "Adicionar",
   "SourceInputMode_Delete": "Eliminar",
   "SourceInputMode_CancelEdit": "OK",
   "SourceInputMode_Settings": "Definições",
-  "SourceInputMode_Default": "Padrão",
+  "SourceInputMode_Default": "Predefinição",
   "SourceInputMode_ClickActivateThreshold": "Limiar de ativação de clique:",
   "SourceInputMode_TouchActivateThreshold": "Limiar de ativação de toque:",
   "SourceInputMode_ClickDeactivateThreshold": "Limiar de desativação de clique:",
@@ -102,8 +103,8 @@
   "SourceInputMode_ButtonModeInputForce_Click": "Gerar clique de:",
   "SourceInputMode_Grab": "Agarrar",
   "SourceInputMode_CapsenseEnableThreshold": "Limiar de ativação de CapSense:",
-  "SourceInputMode_ValueHoldThreshold": "Limiar do valor ao pressionar:",
-  "SourceInputMode_ValueReleaseThreshold": "Limiar do valor ao soltar:",
+  "SourceInputMode_GrabThreshold": "Limiar de agarrar:",
+  "SourceInputMode_ReleaseThreshold": "Limiar de soltar:",
   "SourceInputMode_ForceHoldThreshold": "Limiar da força ao pressionar:",
   "SourceInputMode_ForceReleaseThreshold": "Limiar da força ao soltar:",
   "SourceInputMode_DowngradeSpeed": "Velocidade de degradação:",
@@ -281,10 +282,14 @@
   "TrackerEditor_SelectControllerRole": "Quais mãos:",
   "DisplaySettings_Title": "Definições de visualização",
   "DisplaySettings_DisplayBrightness": "Brilho do ecrã",
+  "DisplaySettings_IndexColumnCorrection": "Index Display Column Correction",
   "DisplaySettings_ColumnCorrection": "Correção de colunas",
   "DisplaySettings_ColumnCorrectionDesc": "A correção de colunas mitiga o efeito de \"rede\" ao mover a cabeça. A maioria dos utilizadores deve deixar a opção ativada, com o ajuste a 0.",
+  "DisplaySettings_ColumnCorrectionEdit": "Edit",
   "DisplaySettings_Error_FirmwareUpdateNeeded": "É necessária uma atualização de firmware para alterar as definições de visualização.",
   "DisplaySettings_EnableColumnCorrection": "Correção de colunas",
+  "DisplaySettings_ColumnCorrectionOff": "Off",
+  "DisplaySettings_ColumnCorrectionAuto": "Auto",
   "DisplaySettings_AdvancedSettings": "Definições avançadas",
   "DisplaySettings_ShowAdvancedSettings": "Mostrar definições avançadas",
   "DisplaySettings_HideAdvancedSettings": "Ocultar definições avançadas",
