--- a/resources/webinterface/dashboard/localization/bindingui_russian.json
+++ b/resources/webinterface/dashboard/localization/bindingui_russian.json
@@ -32,6 +32,7 @@
   "SourceInputMode_Position": "Позиция",
   "SourceInputMode_Pull": "Движение на себя",
   "SourceInputMode_Force": "Усилие",
+  "SourceInputMode_Proximity": "Близость",
   "SourceInputMode_Edit": "Изменить",
   "SourceInputMode_AddMode": "Добавить",
   "SourceInputMode_Delete": "Удалить",
@@ -102,8 +103,8 @@
   "SourceInputMode_ButtonModeInputForce_Click": "Сгенерировать нажатие из источника:",
   "SourceInputMode_Grab": "Захват",
   "SourceInputMode_CapsenseEnableThreshold": "Порог активации ёмкостного датчика:",
-  "SourceInputMode_ValueHoldThreshold": "Порог объёма удержания:",
-  "SourceInputMode_ValueReleaseThreshold": "Порог объёма отпускания:",
+  "SourceInputMode_GrabThreshold": "Grab Threshold:",
+  "SourceInputMode_ReleaseThreshold": "Release Threshold:",
   "SourceInputMode_ForceHoldThreshold": "Порог силы удержания:",
   "SourceInputMode_ForceReleaseThreshold": "Порог силы отпускания:",
   "SourceInputMode_DowngradeSpeed": "Понижение скорости:",
@@ -257,7 +258,7 @@
   "BindingUI_ErrorLoadingBindingTitle": "Сбой при загрузке файла с раскладкой",
   "input_binding_load_failed": "Не удалось загрузить раскладку для %1$s. Пожалуйста, выберите другой вариант.",
   "input_binding_load_failed_no_url": "%2$s: раскладка для «%1$s» не выбрана. Выберите раскладку из списка или создайте свою.",
-  "input_binding_load_below_minimum_version": "%2$s binding for %1$s was from older version of %1$s. Your bindings have been set back to the default.",
+  "input_binding_load_below_minimum_version": "Раскладка для %2$s была создана для устаревшей версии %1$s, поэтому она сброшена до стандартной.",
   "unknown_application": "Неизвестное приложение",
   "TestController_Title": "Test Controllers",
   "InputDebugger_Title": "Отладчик ввода",
@@ -281,10 +282,14 @@
   "TrackerEditor_SelectControllerRole": "Выбор рук:",
   "DisplaySettings_Title": "Настройки экрана",
   "DisplaySettings_DisplayBrightness": "Яркость экрана",
+  "DisplaySettings_IndexColumnCorrection": "Index Display Column Correction",
   "DisplaySettings_ColumnCorrection": "Column Correction",
   "DisplaySettings_ColumnCorrectionDesc": "Column Correction mitigates vertical \"screendoor\" during head motion. Most users should leave it enabled, with fine adjustment of 0.",
+  "DisplaySettings_ColumnCorrectionEdit": "Edit",
   "DisplaySettings_Error_FirmwareUpdateNeeded": "A firmware update is required to enable Display Settings customizations.",
   "DisplaySettings_EnableColumnCorrection": "Column Correction",
+  "DisplaySettings_ColumnCorrectionOff": "Off",
+  "DisplaySettings_ColumnCorrectionAuto": "Auto",
   "DisplaySettings_AdvancedSettings": "Расширенные настройки",
   "DisplaySettings_ShowAdvancedSettings": "Показать расширенные настройки",
   "DisplaySettings_HideAdvancedSettings": "Скрыть расширенные настройки",
