--- a/resources/webinterface/dashboard/localization/bindingui_schinese.json
+++ b/resources/webinterface/dashboard/localization/bindingui_schinese.json
@@ -32,6 +32,7 @@
   "SourceInputMode_Position": "位置",
   "SourceInputMode_Pull": "拉动",
   "SourceInputMode_Force": "力度",
+  "SourceInputMode_Proximity": "Proximity",
   "SourceInputMode_Edit": "编辑",
   "SourceInputMode_AddMode": "添加",
   "SourceInputMode_Delete": "删除",
@@ -50,7 +51,7 @@
   "SourceInputMode_StickyDpad": "激活后保持十字键操作",
   "SourceInputMode_LongPressDelay": "长按延迟：",
   "SourceInputMode_DoublePressDelay": "双按延迟：",
-  "SourceInputMode_DeadZone": "DeadZone",
+  "SourceInputMode_DeadZone": "死区",
   "SourceInputMode_ScrollMode": "滚动模式：",
   "SourceInputMode_ScrollMode_Smooth": "平滑（如触控板）",
   "SourceInputMode_ScrollMode_Discrete": "离散（如鼠标滚轮）",
@@ -96,14 +97,14 @@
   "SourceInputMode_DiscreteScroll_Joystick_Deadzone_Vertical": "垂直死区：",
   "SourceInputMode_InvertYAxis": "反转 Y 轴：",
   "SourceInputMode_InvertXAxis": "反转 X 轴：",
-  "SourceInputMode_StickyClick": "Keep thumbstick clicked while stick is deflected",
+  "SourceInputMode_StickyClick": "倾斜时保持按压住摇杆",
   "SourceInputMode_StickyClick_Activate": "Deflection activation threshold",
   "SourceInputMode_StickyClick_Deactivate": "Deflection deactivation threshold",
   "SourceInputMode_ButtonModeInputForce_Click": "由此生成点击：",
   "SourceInputMode_Grab": "抓取",
   "SourceInputMode_CapsenseEnableThreshold": "电容式感应启用临界值：",
-  "SourceInputMode_ValueHoldThreshold": "值保持临界值：",
-  "SourceInputMode_ValueReleaseThreshold": "值释放临界值：",
+  "SourceInputMode_GrabThreshold": "Grab Threshold:",
+  "SourceInputMode_ReleaseThreshold": "Release Threshold:",
   "SourceInputMode_ForceHoldThreshold": "力度保持临界值：",
   "SourceInputMode_ForceReleaseThreshold": "力度释放临界值：",
   "SourceInputMode_DowngradeSpeed": "降级速度：",
@@ -281,10 +282,14 @@
   "TrackerEditor_SelectControllerRole": "左右手选择：",
   "DisplaySettings_Title": "Display Settings",
   "DisplaySettings_DisplayBrightness": "Display Brightness",
+  "DisplaySettings_IndexColumnCorrection": "Index Display Column Correction",
   "DisplaySettings_ColumnCorrection": "Column Correction",
   "DisplaySettings_ColumnCorrectionDesc": "Column Correction mitigates vertical \"screendoor\" during head motion. Most users should leave it enabled, with fine adjustment of 0.",
+  "DisplaySettings_ColumnCorrectionEdit": "Edit",
   "DisplaySettings_Error_FirmwareUpdateNeeded": "A firmware update is required to enable Display Settings customizations.",
   "DisplaySettings_EnableColumnCorrection": "Column Correction",
+  "DisplaySettings_ColumnCorrectionOff": "Off",
+  "DisplaySettings_ColumnCorrectionAuto": "Auto",
   "DisplaySettings_AdvancedSettings": "Advanced Settings",
   "DisplaySettings_ShowAdvancedSettings": "Show Advanced Settings",
   "DisplaySettings_HideAdvancedSettings": "Hide Advanced Settings",
@@ -312,16 +317,16 @@
   "SecondaryController_ReturnWithLeftHand": "Return bindings with left hand",
   "SecondaryController_ReturnWithRightHand": "Return bindings with right hand",
   "SecondaryController_ReturnWithHead": "Return bindings with HMD",
-  "Settings_ThumbstickDeadzone_Text": "Thumbstick Deadzone:",
-  "Settings_ControllerSettings_Title": "Thumbstick Settings",
+  "Settings_ThumbstickDeadzone_Text": "摇杆死区",
+  "Settings_ControllerSettings_Title": "摇杆设置",
   "Settings_ControllerSettings_Utilities": "Controller Utilities",
   "Settings_General_Cancel": "Cancel",
   "Settings_General_Confirm": "Confirm",
-  "Settings_General_CalibrateThumbstick": "Calibrate",
-  "Settings_General_NotEnoughSamples": "Please press up on the thumbstick at least %1$s more times to complete calibration.",
+  "Settings_General_CalibrateThumbstick": "校准",
+  "Settings_General_NotEnoughSamples": "请至少再按压摇杆 %1$s 下以完成校准。",
   "Settings_General_InviteMoreSamples": "Calculated angle of %1$s degrees. Keep pressing up to refine that value or press Confirm to accept this calibration.",
-  "Settings_General_LeftThumbstickAngle": "Left Thumbstick Angle: %1$s°",
-  "Settings_General_RightThumbstickAngle": "Right Thumbstick Angle: %1$s°",
+  "Settings_General_LeftThumbstickAngle": "左摇杆角度：%1$s°",
+  "Settings_General_RightThumbstickAngle": "右摇杆角度：%1$s°",
   "Settings_General_Reset": "Reset",
   "LegacyDebugger_NoApp": "Run any legacy input application to see its input data here."
 }
