--- a/resources/webinterface/dashboard/localization/bindingui_spanish.json
+++ b/resources/webinterface/dashboard/localization/bindingui_spanish.json
@@ -32,6 +32,7 @@
   "SourceInputMode_Position": "Posición",
   "SourceInputMode_Pull": "Tirar de",
   "SourceInputMode_Force": "Fuerza",
+  "SourceInputMode_Proximity": "Proximidad",
   "SourceInputMode_Edit": "Editar",
   "SourceInputMode_AddMode": "Añadir",
   "SourceInputMode_Delete": "Eliminar",
@@ -65,10 +66,10 @@
   "SourceInputMode_SmoothScroll_MinLastVelocitiesToAverage": "Media de las velocidades mínimas previas:",
   "SourceInputMode_SmoothScroll_MaxLastVelocitiesToAverage": "Media de las velocidades máximas previas:",
   "SourceInputMode_SmoothScroll_ThrownTerminationVelocity": "Velocidad de desaceleración del desplazamiento:",
-  "SourceInputMode_SmoothScroll_EdgeScrollThreshold": "Umbral de desplazamiento vertical:",
-  "SourceInputMode_SmoothScroll_EdgeScrollThresholdVerticalBias": "Compensación vertical del umbral de desplazamiento vertical:",
-  "SourceInputMode_SmoothScroll_EdgeScrollVelocity": "Velocidad de desplazamiento vertical:",
-  "SourceInputMode_SmoothScroll_EdgeMinSwipe": "Deslizamiento mínimo para el desplazamiento vertical:",
+  "SourceInputMode_SmoothScroll_EdgeScrollThreshold": "Umbral de desplazamiento en el borde:",
+  "SourceInputMode_SmoothScroll_EdgeScrollThresholdVerticalBias": "Sesgo vertical del umbral de desplazamiento en el borde:",
+  "SourceInputMode_SmoothScroll_EdgeScrollVelocity": "Velocidad de desplazamiento en el borde:",
+  "SourceInputMode_SmoothScroll_EdgeMinSwipe": "Deslizamiento mínimo para desplazamiento en el borde:",
   "SourceInputMode_SmoothScroll_MinSideScrollRatio": "Relación necesaria para el desplazamiento horizontal:",
   "SourceInputMode_SmoothScroll_Joystick_MinInputMagnitude": "Magnitud de entrada mínima:",
   "SourceInputMode_DiscreteScroll_Trackpad_GlobalScaleFactor": "Escala de desplazamiento:",
@@ -81,7 +82,7 @@
   "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnMove": "Umbral de movimiento:",
   "SourceInputMode_DiscreteScroll_Trackpad_AccumThreshold_OnReversal": "Umbral de inversión:",
   "SourceInputMode_DiscreteScroll_Trackpad_FlickEnabled": "Desplazamiento de toque habilitado:",
-  "SourceInputMode_DiscreteScroll_Trackpad_FlickThreshold": "Umbral de toque:",
+  "SourceInputMode_DiscreteScroll_Trackpad_FlickThreshold": "Umbral de movimiento rápido:",
   "SourceInputMode_DiscreteScroll_Trackpad_FlickScrollMultiplier": "Multiplicador de umbral de toque:",
   "SourceInputMode_DiscreteScroll_Trackpad_FlickThrowSpeed": "Impulso del toque:",
   "SourceInputMode_DiscreteScroll_Trackpad_SlideAndHoldEnabled": "Desplazamiento de deslizar y mantener:",
@@ -101,9 +102,9 @@
   "SourceInputMode_StickyClick_Deactivate": "Umbral de desactivación de la desviación",
   "SourceInputMode_ButtonModeInputForce_Click": "Generar clic desde:",
   "SourceInputMode_Grab": "Agarrar",
-  "SourceInputMode_CapsenseEnableThreshold": "Habilitar Capsense:",
-  "SourceInputMode_ValueHoldThreshold": "Umbral del valor de pulsar:",
-  "SourceInputMode_ValueReleaseThreshold": "Umbral del valor de soltar:",
+  "SourceInputMode_CapsenseEnableThreshold": "Umbral de activación de detección capacitiva:",
+  "SourceInputMode_GrabThreshold": "Umbral de agarre:",
+  "SourceInputMode_ReleaseThreshold": "Umbral de suelta:",
   "SourceInputMode_ForceHoldThreshold": "Umbral de la fuerza de pulsar:",
   "SourceInputMode_ForceReleaseThreshold": "Umbral de la fuerza de soltar:",
   "SourceInputMode_DowngradeSpeed": "Velocidad de degradación:",
@@ -281,10 +282,14 @@
   "TrackerEditor_SelectControllerRole": "Qué manos:",
   "DisplaySettings_Title": "Configuración de pantalla",
   "DisplaySettings_DisplayBrightness": "Brillo de la pantalla",
+  "DisplaySettings_IndexColumnCorrection": "Index Display Column Correction",
   "DisplaySettings_ColumnCorrection": "Corrección de columna",
   "DisplaySettings_ColumnCorrectionDesc": "La corrección de columna mitiga el «screendoor» vertical durante el movimiento de la cabeza. La mayoría de los usuarios deberían dejarlo habilitado, con un ajuste fino de 0.",
+  "DisplaySettings_ColumnCorrectionEdit": "Edit",
   "DisplaySettings_Error_FirmwareUpdateNeeded": "Se requiere una actualización de firmware para habilitar las personalizaciones de la configuración de pantalla.",
   "DisplaySettings_EnableColumnCorrection": "Corrección de columna",
+  "DisplaySettings_ColumnCorrectionOff": "Off",
+  "DisplaySettings_ColumnCorrectionAuto": "Auto",
   "DisplaySettings_AdvancedSettings": "Configuración avanzada",
   "DisplaySettings_ShowAdvancedSettings": "Mostrar configuración avanzada",
   "DisplaySettings_HideAdvancedSettings": "Ocultar configuración avanzada",
