--- a/resources/webinterface/dashboard/localization/bindingui_swedish.json
+++ b/resources/webinterface/dashboard/localization/bindingui_swedish.json
@@ -32,6 +32,7 @@
   "SourceInputMode_Position": "Position",
   "SourceInputMode_Pull": "Dra",
   "SourceInputMode_Force": "Kraft",
+  "SourceInputMode_Proximity": "Proximity",
   "SourceInputMode_Edit": "Redigera",
   "SourceInputMode_AddMode": "Lägg till",
   "SourceInputMode_Delete": "Ta bort",
@@ -102,8 +103,8 @@
   "SourceInputMode_ButtonModeInputForce_Click": "Generera klick från:",
   "SourceInputMode_Grab": "Greppa",
   "SourceInputMode_CapsenseEnableThreshold": "Tröskel för aktivering av kapacitiv sensor:",
-  "SourceInputMode_ValueHoldThreshold": "Hållningströskel:",
-  "SourceInputMode_ValueReleaseThreshold": "Släpptröskel:",
+  "SourceInputMode_GrabThreshold": "Grab Threshold:",
+  "SourceInputMode_ReleaseThreshold": "Release Threshold:",
   "SourceInputMode_ForceHoldThreshold": "Tröskel för tvingad hållning:",
   "SourceInputMode_ForceReleaseThreshold": "Tröskel för tvingat släpp:",
   "SourceInputMode_DowngradeSpeed": "Nedgraderingshastighet:",
@@ -281,10 +282,14 @@
   "TrackerEditor_SelectControllerRole": "Vilka händer:",
   "DisplaySettings_Title": "Skärminställningar",
   "DisplaySettings_DisplayBrightness": "Ljusstyrka för skärm",
+  "DisplaySettings_IndexColumnCorrection": "Index Display Column Correction",
   "DisplaySettings_ColumnCorrection": "Kolumnkorrigering",
   "DisplaySettings_ColumnCorrectionDesc": "Kolumnkorrigering mildrar vertikal \"skärmdörrseffekt\" vid huvudrörelser. De flesta användare bör lämna den aktiverad med en finjustering på 0.",
+  "DisplaySettings_ColumnCorrectionEdit": "Edit",
   "DisplaySettings_Error_FirmwareUpdateNeeded": "En programvaruuppdatering krävs för att aktivera anpassning av skärminställningar.",
   "DisplaySettings_EnableColumnCorrection": "Kolumnkorrigering",
+  "DisplaySettings_ColumnCorrectionOff": "Off",
+  "DisplaySettings_ColumnCorrectionAuto": "Auto",
   "DisplaySettings_AdvancedSettings": "Avancerade inställningar",
   "DisplaySettings_ShowAdvancedSettings": "Visa avancerade inställningar",
   "DisplaySettings_HideAdvancedSettings": "Dölj avancerade inställningar",
