--- a/resources/webinterface/dashboard/localization/bindingui_tchinese.json
+++ b/resources/webinterface/dashboard/localization/bindingui_tchinese.json
@@ -32,6 +32,7 @@
   "SourceInputMode_Position": "位置",
   "SourceInputMode_Pull": "拉扣",
   "SourceInputMode_Force": "力度",
+  "SourceInputMode_Proximity": "Proximity",
   "SourceInputMode_Edit": "修改",
   "SourceInputMode_AddMode": "新增",
   "SourceInputMode_Delete": "刪除",
@@ -102,8 +103,8 @@
   "SourceInputMode_ButtonModeInputForce_Click": "點擊產生來源：",
   "SourceInputMode_Grab": "抓取",
   "SourceInputMode_CapsenseEnableThreshold": "電容啟動臨界值：",
-  "SourceInputMode_ValueHoldThreshold": "按壓值臨界值：",
-  "SourceInputMode_ValueReleaseThreshold": "放開值臨界值：",
+  "SourceInputMode_GrabThreshold": "Grab Threshold:",
+  "SourceInputMode_ReleaseThreshold": "Release Threshold:",
   "SourceInputMode_ForceHoldThreshold": "按壓力度臨界值：",
   "SourceInputMode_ForceReleaseThreshold": "放開力度臨界值：",
   "SourceInputMode_DowngradeSpeed": "降級速度：",
@@ -281,10 +282,14 @@
   "TrackerEditor_SelectControllerRole": "哪一隻手：",
   "DisplaySettings_Title": "顯示器設定",
   "DisplaySettings_DisplayBrightness": "顯示器亮度",
+  "DisplaySettings_IndexColumnCorrection": "Index Display Column Correction",
   "DisplaySettings_ColumnCorrection": "直列修正",
   "DisplaySettings_ColumnCorrectionDesc": "直列修正可減緩移動頭部時垂直的「紗窗效應」。多數使用者會保持開啟，並微調為 0。",
+  "DisplaySettings_ColumnCorrectionEdit": "Edit",
   "DisplaySettings_Error_FirmwareUpdateNeeded": "必須更新韌體才能自訂顯示器設定。",
   "DisplaySettings_EnableColumnCorrection": "直列修正",
+  "DisplaySettings_ColumnCorrectionOff": "Off",
+  "DisplaySettings_ColumnCorrectionAuto": "Auto",
   "DisplaySettings_AdvancedSettings": "進階設定",
   "DisplaySettings_ShowAdvancedSettings": "顯示進階設定",
   "DisplaySettings_HideAdvancedSettings": "隱藏進階設定",
@@ -311,7 +316,7 @@
   "SecondaryControllerTab": "額外設定",
   "SecondaryController_ReturnWithLeftHand": "以左手回傳按鍵綁定",
   "SecondaryController_ReturnWithRightHand": "以右手回傳按鍵綁定",
-  "SecondaryController_ReturnWithHead": "Return bindings with HMD",
+  "SecondaryController_ReturnWithHead": "恢复頭戴顯示器配置",
   "Settings_ThumbstickDeadzone_Text": "搖桿死區：",
   "Settings_ControllerSettings_Title": "搖桿設定",
   "Settings_ControllerSettings_Utilities": "控制器工具",
