--- a/resources/webinterface/dashboard/localization/bindingui_thai.json
+++ b/resources/webinterface/dashboard/localization/bindingui_thai.json
@@ -32,6 +32,7 @@
   "SourceInputMode_Position": "ตำแหน่ง",
   "SourceInputMode_Pull": "ดึง",
   "SourceInputMode_Force": "แรงกด",
+  "SourceInputMode_Proximity": "พร็อกซิมิตี้",
   "SourceInputMode_Edit": "แก้ไข",
   "SourceInputMode_AddMode": "เพิ่ม",
   "SourceInputMode_Delete": "ลบ",
@@ -102,8 +103,8 @@
   "SourceInputMode_ButtonModeInputForce_Click": "สร้างคลิกจาก:",
   "SourceInputMode_Grab": "หยิบ",
   "SourceInputMode_CapsenseEnableThreshold": "ค่าเกณฑ์การเปิดการใช้งาน CapSense:",
-  "SourceInputMode_ValueHoldThreshold": "ค่าเกณฑ์การค้างค่า:",
-  "SourceInputMode_ValueReleaseThreshold": "ค่าเกณฑ์การปล่อยค่า:",
+  "SourceInputMode_GrabThreshold": "ค่าเกณฑ์การหยิบ:",
+  "SourceInputMode_ReleaseThreshold": "ค่าเกณฑ์การปล่อย:",
   "SourceInputMode_ForceHoldThreshold": "ค่าเกณฑ์แรงยึด:",
   "SourceInputMode_ForceReleaseThreshold": "ค่าเกณฑ์แรงปล่อย:",
   "SourceInputMode_DowngradeSpeed": "ความเร็วลดระดับ:",
@@ -281,10 +282,14 @@
   "TrackerEditor_SelectControllerRole": "มือข้าง:",
   "DisplaySettings_Title": "การตั้งค่าจอแสดงผล",
   "DisplaySettings_DisplayBrightness": "ความสว่างของจอแสดงผล",
+  "DisplaySettings_IndexColumnCorrection": "Index Display Column Correction",
   "DisplaySettings_ColumnCorrection": "การแก้ไขคอลัมน์",
   "DisplaySettings_ColumnCorrectionDesc": "การแก้ไขคอลัมน์ช่วยลดปัญหา \"ตาข่าย\" แนวตั้งระหว่างที่ศีรษะเคลื่อนไหว ผู้ใช้ส่วนใหญ่ควรเปิดใช้งานทิ้งไว้ โดยมีค่าการปรับแต่งแบบละเอียดเท่ากับ 0",
+  "DisplaySettings_ColumnCorrectionEdit": "Edit",
   "DisplaySettings_Error_FirmwareUpdateNeeded": "ต้องมีอัปเดตเฟิร์มแวร์เพื่อเปิดใช้งานการปรับแต่งการตั้งค่าจอแสดงผล",
   "DisplaySettings_EnableColumnCorrection": "การแก้ไขคอลัมน์",
+  "DisplaySettings_ColumnCorrectionOff": "Off",
+  "DisplaySettings_ColumnCorrectionAuto": "Auto",
   "DisplaySettings_AdvancedSettings": "การตั้งค่าขั้นสูง",
   "DisplaySettings_ShowAdvancedSettings": "แสดงการตั้งค่าขั้นสูง",
   "DisplaySettings_HideAdvancedSettings": "ซ่อนการตั้งค่าขั้นสูง",
