--- a/resources/webinterface/dashboard/localization/bindingui_turkish.json
+++ b/resources/webinterface/dashboard/localization/bindingui_turkish.json
@@ -32,6 +32,7 @@
   "SourceInputMode_Position": "Pozisyon",
   "SourceInputMode_Pull": "Çekme",
   "SourceInputMode_Force": "Güç",
+  "SourceInputMode_Proximity": "Yakınlık",
   "SourceInputMode_Edit": "Düzenle",
   "SourceInputMode_AddMode": "Ekle",
   "SourceInputMode_Delete": "Sil",
@@ -102,8 +103,8 @@
   "SourceInputMode_ButtonModeInputForce_Click": "Şuradan tıklama oluştur:",
   "SourceInputMode_Grab": "Kavrama",
   "SourceInputMode_CapsenseEnableThreshold": "CapSense Etkinleştirme Eşiği:",
-  "SourceInputMode_ValueHoldThreshold": "Değer Tutma Eşiği:",
-  "SourceInputMode_ValueReleaseThreshold": "Değer Bırakma Eşiği:",
+  "SourceInputMode_GrabThreshold": "Grab Threshold:",
+  "SourceInputMode_ReleaseThreshold": "Release Threshold:",
   "SourceInputMode_ForceHoldThreshold": "Zorla Tutma Eşiği:",
   "SourceInputMode_ForceReleaseThreshold": "Zorla Bırakma Eşiği:",
   "SourceInputMode_DowngradeSpeed": "Düşüş Hızı:",
@@ -281,10 +282,14 @@
   "TrackerEditor_SelectControllerRole": "Hangi eller:",
   "DisplaySettings_Title": "Görüntü Ayarları",
   "DisplaySettings_DisplayBrightness": "Ekran Parlaklığı",
+  "DisplaySettings_IndexColumnCorrection": "Index Display Column Correction",
   "DisplaySettings_ColumnCorrection": "Sütun Düzeltmesi",
   "DisplaySettings_ColumnCorrectionDesc": "Column Correction mitigates vertical \"screendoor\" during head motion. Most users should leave it enabled, with fine adjustment of 0.",
+  "DisplaySettings_ColumnCorrectionEdit": "Edit",
   "DisplaySettings_Error_FirmwareUpdateNeeded": "Görüntü Ayarları özelleştirmelerini etkinleştirmek için yazılım güncellemesi gereklidir.",
   "DisplaySettings_EnableColumnCorrection": "Sütun Düzeltmesi",
+  "DisplaySettings_ColumnCorrectionOff": "Off",
+  "DisplaySettings_ColumnCorrectionAuto": "Auto",
   "DisplaySettings_AdvancedSettings": "Gelişmiş Ayarlar",
   "DisplaySettings_ShowAdvancedSettings": "Gelişmiş Ayarları Göster",
   "DisplaySettings_HideAdvancedSettings": "Gelişmiş Ayarları Gizle",
