--- a/resources/webinterface/dashboard/localization/bindingui_ukrainian.json
+++ b/resources/webinterface/dashboard/localization/bindingui_ukrainian.json
@@ -32,6 +32,7 @@
   "SourceInputMode_Position": "Позиція",
   "SourceInputMode_Pull": "Потягнути",
   "SourceInputMode_Force": "Зусилля",
+  "SourceInputMode_Proximity": "Близкість",
   "SourceInputMode_Edit": "Редагувати",
   "SourceInputMode_AddMode": "Додати",
   "SourceInputMode_Delete": "Видалити",
@@ -102,8 +103,8 @@
   "SourceInputMode_ButtonModeInputForce_Click": "Генерувати натискання від:",
   "SourceInputMode_Grab": "Схопити",
   "SourceInputMode_CapsenseEnableThreshold": "Поріг увімкнення CapSense:",
-  "SourceInputMode_ValueHoldThreshold": "Поріг вартості утримання:",
-  "SourceInputMode_ValueReleaseThreshold": "Поріг вартості звільнення:",
+  "SourceInputMode_GrabThreshold": "Поріг хвату:",
+  "SourceInputMode_ReleaseThreshold": "Поріг звільнення:",
   "SourceInputMode_ForceHoldThreshold": "Поріг сили утримання:",
   "SourceInputMode_ForceReleaseThreshold": "Поріг сили звільнення:",
   "SourceInputMode_DowngradeSpeed": "Зниження швидкості:",
@@ -281,10 +282,14 @@
   "TrackerEditor_SelectControllerRole": "Які руки:",
   "DisplaySettings_Title": "Налаштування екрана",
   "DisplaySettings_DisplayBrightness": "Яскравість екрана",
+  "DisplaySettings_IndexColumnCorrection": "Index Display Column Correction",
   "DisplaySettings_ColumnCorrection": "Виправлення стовпчика",
   "DisplaySettings_ColumnCorrectionDesc": "Виправлення стовпчиків пом’якшує ефект вертикальної решітки під час рухів головою. Більшості користувачів варто лишити це ввімкненим зі значенням коригування 0.",
+  "DisplaySettings_ColumnCorrectionEdit": "Edit",
   "DisplaySettings_Error_FirmwareUpdateNeeded": "Для увімкнення налаштування екрана потрібно оновити мікропрограму.",
   "DisplaySettings_EnableColumnCorrection": "Виправлення стовпчика",
+  "DisplaySettings_ColumnCorrectionOff": "Off",
+  "DisplaySettings_ColumnCorrectionAuto": "Auto",
   "DisplaySettings_AdvancedSettings": "Розширені налаштування",
   "DisplaySettings_ShowAdvancedSettings": "Показати розширені налаштування",
   "DisplaySettings_HideAdvancedSettings": "Сховати розширені налаштування",
