--- a/resources/webinterface/dashboard/localization/bindingui_vietnamese.json
+++ b/resources/webinterface/dashboard/localization/bindingui_vietnamese.json
@@ -32,6 +32,7 @@
   "SourceInputMode_Position": "Vị trí",
   "SourceInputMode_Pull": "Kéo",
   "SourceInputMode_Force": "Lực",
+  "SourceInputMode_Proximity": "Độ gần",
   "SourceInputMode_Edit": "Sửa",
   "SourceInputMode_AddMode": "Thêm",
   "SourceInputMode_Delete": "Xóa",
@@ -102,8 +103,8 @@
   "SourceInputMode_ButtonModeInputForce_Click": "Tạo thao tác nhấp từ:",
   "SourceInputMode_Grab": "Nắm",
   "SourceInputMode_CapsenseEnableThreshold": "Giá trị ngưỡng bật cảm biến điện rung:",
-  "SourceInputMode_ValueHoldThreshold": "Giá trị ngưỡng kích hoạt giữ:",
-  "SourceInputMode_ValueReleaseThreshold": "Giá trị ngưỡng kích hoạt thả:",
+  "SourceInputMode_GrabThreshold": "Ngưỡng nắm:",
+  "SourceInputMode_ReleaseThreshold": "Ngưỡng thả:",
   "SourceInputMode_ForceHoldThreshold": "Giá trị lực kích hoạt giữ:",
   "SourceInputMode_ForceReleaseThreshold": "Giá trị lực kích hoạt thả:",
   "SourceInputMode_DowngradeSpeed": "Tốc độ hạ cấp:",
@@ -281,10 +282,14 @@
   "TrackerEditor_SelectControllerRole": "Tay nào:",
   "DisplaySettings_Title": "Thiết lập màn hình",
   "DisplaySettings_DisplayBrightness": "Độ sáng màn hình",
+  "DisplaySettings_IndexColumnCorrection": "Index Display Column Correction",
   "DisplaySettings_ColumnCorrection": "Hiệu chỉnh cột",
   "DisplaySettings_ColumnCorrectionDesc": "Hiệu chỉnh cột là tính năng làm giảm hiệu ứng \"cửa lưới\" theo chiều dọc khi đầu di chuyển (đây là hiệu ứng làm mọi thứ bạn nhìn như có lưới chống muỗi trước mặt). Đa phần người dùng đều bật tính năng này, với hệ số tinh chỉnh là 0.",
+  "DisplaySettings_ColumnCorrectionEdit": "Edit",
   "DisplaySettings_Error_FirmwareUpdateNeeded": "Cần phải cập nhật firmware để bật tính năng tùy biến thiết lập màn hình.",
   "DisplaySettings_EnableColumnCorrection": "Hiệu chỉnh cột",
+  "DisplaySettings_ColumnCorrectionOff": "Off",
+  "DisplaySettings_ColumnCorrectionAuto": "Auto",
   "DisplaySettings_AdvancedSettings": "Thiết lập nâng cao",
   "DisplaySettings_ShowAdvancedSettings": "Hiện thiết lập nâng cao",
   "DisplaySettings_HideAdvancedSettings": "Ẩn thiết lập nâng cao",
