--- a/resources/webinterface/dashboard/localization/vrmonitor_tchinese.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_tchinese.json
@@ -4,6 +4,17 @@
 	"VRMonitor_Nav_Settings": "設定",
 	"VRMonitor_Nav_Help": "說明",
 	"VRMonitor_Nav_Developer": "開發者",
+	"Settings_ControllerSettings": "Controller Settings",
+	"Settings_Controller_ShowBindingCallouts": "Show Binding On Controllers",
+	"Settings_Controller_ShowBindingCalloutsInVR": "Show Binding On Controllers in VR",
+	"Settings_Controller_AdvancedControllerSettings": "Manage Controller Bindings",
+	"Settings_Controller_ControllerBindingPrompt": "Controller Binding",
+	"Settings_Controller_DefaultBinding": "Default",
+	"Settings_Controller_CustomBinding": "Custom",
+	"Settings_ThumbstickDeadzone_Text": "搖桿死區",
+	"Settings_ThumbstickDeadzone_Desc": "Adjust the deadzone on all thumbsticks.",
+	"Settings_Loading_CurrentBinding": "Loading current binding...",
+	"Settings_NeedSteamTo_ViewAndEditBindings": "Launch Steam to view and edit bindings.",
 	"VRMonitor_Overview_SystemStatus_Title": "系統狀態",
 	"VRMonitor_Overview_DeviceStatus_Title": "裝置狀態",
 	"VRMonitor_Overview_Notifications_Title": "通知",
@@ -29,15 +40,17 @@
 	"VRMonitor_DevNav_Console": "主機",
 	"VRMonitor_DevNav_RoomOverview": "房間概覽",
 	"VRMonitor_DevNav_Files": "檔案",
-	"Settings_Audio_On": "使用 SteamVR 時……",
-	"Settings_Audio_AudioPlay": "將播放裝置設為",
-	"Settings_Audio_AudioRecord": "將錄音裝置設為",
-	"Settings_Audio_Off": "離開 SteamVR 時…",
-	"Settings_Audio_HDMIGain": "在 Vive HDMI 音訊上啟用增益衰減",
-	"Settings_Audio_LeaveAlone": "（不變更裝置）",
-	"Settings_Audio_AudioMirrorPlay": "同步輸出音訊到裝置",
-	"Settings_Audio_AudioMirrorUnsupported": "此平台不支援音訊鏡像輸出",
-	"Settings_Audio_NoMirror": "（不同步輸出）",
+	"Settings_SelectAnOption": "Select an option...",
+	"Settings_BluetoothSettings": "Bluetooth Settings",
+	"Settings_BaseStationSettings": "Base Station Settings",
+	"Settings_Audio_Playback_Automatic_Label": "Audio output device",
+	"Settings_Audio_Recording_Automatic_Label": "Audio input device",
+	"Settings_Audio_Headset": "Headset",
+	"Settings_Audio_Manual": "Manual",
+	"Settings_Audio_Mirroring_Label": "Audio mirroring",
+	"Settings_Audio_Default": "Default",
+	"Settings_Audio_Current_Setting_Unknown": "(Currently selected device is not present)",
+	"Settings_Audio_HDMIGain": "Gain reduction on VIVE HDMI Audio",
 	"Settings_SectionTitle_Advanced": "進階",
 	"Settings_SectionTitle_Developer": "開發人員",
 	"Settings_SectionTitle_General": "一般",
@@ -47,14 +60,15 @@
 	"Settings_SectionTitle_Camera": "鏡頭",
 	"Settings_SectionTitle_Bluetooth": "藍牙",
 	"Settings_SectionTitle_Power": "電源",
-	"Settings_SectionTitle_Internal": "內部",
+	"Settings_SectionTitle_StartupShutdown": "Startup / Shutdown",
 	"Settings_SectionTitle_Home": "首頁",
-	"Settings_SectionTitle_Chaperone": "Chaperone 導護系統",
+	"Settings_SectionTitle_PlayArea": "Play Area",
 	"Settings_SectionTitle_BaseStation": "定位器",
+	"Settings_SectionTitle_Controller": "Controllers",
 	"Advanced_AllowSavingOfTimingInfo": "允許儲存時間資訊",
-	"Advanced_AutoSaveTimingInfoOnExit": "退出時自動儲存時間資訊",
+	"Advanced_AutoSaveTimingInfoOnExit": "結束時自動儲存時間資訊",
 	"Settings_EnableWebHelperDebugger": "啟用 Web Helper 偵錯工具",
-	"Settings_EnableWebHelperDebuggerDesc": "啟用偵錯伺服器，以將 Chromium 開發者與偵錯工具連接至嵌入的 Chromium 頁面。必須重新啟動 SteamVR。",
+	"Settings_EnableWebHelperDebuggerDesc": "Enables debugging server for attaching Chromium dev tools and debugger to embedded Chromium pages. It's always enabled on Perforce builds.",
 	"Advanced_PerfGraphInHMD": "在頭戴顯示器內顯示 GPU 效能圖表",
 	"Advanced_SaveFrameDataNow": "儲存影格資料",
 	"Explanation_DisableEnhancedPowerManagement": "如果您已配對的無線控制器原因不明地追蹤不到動作或沒有反應，請停用 Windows 進階電源管理針對 SteamVR USB 裝置的設定。 ",
@@ -70,38 +84,35 @@
 	"MenuAction_ResetDismissableWarnings": "重設警告",
 	"MenuAction_SetConfigDirectory": "設定設定檔目錄",
 	"MenuAction_SetLogDirectory": "設定紀錄檔目錄",
-	"Settings_Advanced_AllowSupersampleFiltering": "啟用進階超取樣濾鏡",
+	"Settings_Advanced_AllowSupersampleFiltering": "Advanced Supersample Filtering",
 	"Settings_Advanced_Paths_Header": "路徑",
 	"Settings_Advanced_Reset_Header": "重設",
 	"Settings_Advanced_Status_Header": "狀態檢查",
-	"Settings_ArcadeMode": "啟用大型機台模式",
+	"Settings_ShowSettingsInDashboard": "Settings (VR Dashboard)",
 	"Settings_CheckForSteam": "檢查 Steam",
 	"Settings_DebugInputBindings": "啟用輸入配置使用者介面中的偵錯選項",
-	"Settings_DoNotFadeToGrid": "應用程式當機時，不淡出為方格",
-	"Settings_EnableDashboard": "啟用 VR 主控台",
-	"Settings_HomeAppCheck": "使用 SteamVR 家",
+	"Settings_FadeToGrid": "Fade To Grid on app hang",
+	"Settings_EnableDashboard": "VR Dashboard",
+	"Settings_HomeAppCheck": "SteamVR Home",
 	"Settings_HomeAppDesc": "享受虛擬場景、社交功能，和更多精彩內容。",
 	"Settings_LargeSpace": "大型空間",
 	"Settings_LockedModeCheck": "鎖定模式",
 	"Settings_LockedModeDesc": "電腦鎖定時，允許頭戴顯示器內的彩現。",
+	"Settings_PauseOnStandby": "Pause VR when headset is idle",
+	"Settings_PauseOnLocked": "Pause VR when computer is locked",
 	"Settings_MediumSpace": "中型空间",
 	"Settings_NightModeCheck": "夜間模式",
 	"Settings_NightModeDesc": "調低螢幕亮度直到凌晨 5 點（或重新啟動 SteamVR）。",
-	"Settings_NotificationDoNotDisturb_Info": "啟用「請勿打擾」時，收到的通知將被攔截。",
-	"Settings_NotificationDoNotDisturb_Text": "請勿打擾",
-	"Settings_PauseOnStandby": "頭戴顯示器閒置時。暫停彩現",
 	"Settings_ShowPlaylistMenu": "顯示播放清單選單",
 	"Settings_SmallSpace": "小型空間",
-	"Settings_StartSteamVROnAppLaunch": "執行應用程式時同時啟動 SteamVR",
 	"Settings_StatusWindowAlwaysOnTop_Info": " ",
-	"Settings_StatusWindowAlwaysOnTop_Text": "永遠置於頂端",
+	"Settings_StatusWindowAlwaysOnTop_Text": "SteamVR Always on Top",
 	"Settings_StatusWindowMinimizeToTray_Text": "最小化時將 SteamVR 狀態最小化至系統匣",
 	"Settings_SuppressWarnings_Text": "SteamVR 狀態最小化時，隱藏警告與通知",
 	"StatusCheckInterval_Never": "永不",
 	"StatusCheckInterval_Normal": "正常（1 秒）",
 	"StatusCheckInterval_Often": "經常（100 毫秒）",
 	"StatusCheckInterval_Seldom": "很少（5 秒）",
-	"Settings_ThumbstickDeadzone_Text": "搖桿死區",
 	"Settings_KnockKnock_Button": "叩叩",
 	"Settings_KnockKnock_Desc": "此設定能讓身處 VR 之外的人引起帶著頭戴顯示器的使用者的注意",
 	"Settings_CreateSystemReport_Button": "建立系統報告",
@@ -113,28 +124,30 @@
 	"Settings_Chaperone_Style_3": "進階",
 	"Settings_Chaperone_Style_4": "僅有地板",
 	"Settings_Video_RefreshRate_Header": "更新頻率",
-	"Settings_Video_RefreshRate_HzSuffix": "Hz",
+	"Settings_Video_RefreshRate_HzSuffix": " Hz",
+	"Settings_Video_RefreshRate_Label_Hz": "Refresh Rate (Hz)",
 	"Settings_Video_RefreshRate_NotFound": "您的頭戴顯示器支援其它的更新頻率，但顯示卡驅動程式未偵測到。請確認您的頭戴顯示器韌體和顯示卡驅動程式為最新版本。",
 	"Settings_Video_RefreshRate_NotAvailableExtended": "您的頭戴顯示器支援其它的更新頻率，但 SteamVR 無法在頭戴顯示器處於延伸模式時管理更新頻率。",
 	"Settings_Video_RefreshRate_EnableDirectModeAction": "啟用直輸模式",
-	"Settings_Video_RestartNotice": "此變更將在您重新啟動 SteamVR 後生效。",
-	"Settings_Video_RestartAction": "重新啟動 SteamVR ",
+	"Settings_Video_RefreshRate_OneSupported": "Only one refresh rate is supported for your system.",
 	"Settings_Video_AppResFooter": "目前各眼的彩現設定為 %1$s",
 	"Settings_Advanced_MotionSmoothing_Header": "動態平滑",
 	"Settings_Advanced_MotionSmoothing_Description": "若執行中的應用程式無法維持幀率，即合成出新幀，以保持良好的體驗品質。",
-	"Settings_Advanced_MotionSmoothing": "啟用動態平滑",
 	"Settings_Advanced_MotionSmoothing_Disabled": "動態平滑必須具非同步再投影支援。",
-	"Settings_Advanced_Supersampling_Header": "應用程式解析度",
+	"Settings_Advanced_Supersampling_Auto": "Auto",
+	"Settings_Advanced_Supersampling_Custom": "Custom",
+	"Settings_Advanced_Supersampling_Header": "Render Resolution",
 	"Settings_Advanced_Supersampling_Warning": "下方的設定將覆蓋所有自動設定，並會影響所有應用程式。若希望更改特定應用程式的解析度，請至「應用程式設定」。",
+	"Settings_Advanced_Supersampling_WidthByHeight": "%1$s × %2$s",
 	"Settings_Advanced_SupersamplingManualOverride": "啟用解析度調整",
+	"Settings_Advanced_Supersampline_ResolutionPerEye": "Resolution Per Eye",
 	"Explanation_Supersampling_Header": "SteamVR 會自動根據您的 GPU 效能設定應用程式解析度。",
 	"Explanation_Supersampling": "* 部份應用程式可能需要重新啟動，設定才會生效。",
 	"Explanation_SupersamplingFiltering": "超取樣濾鏡選項：",
-	"Settings_PerApplication_Header": "為特定應用程式建立獨特的彩現設定",
+	"Explanation_Supersampling_ResolutionPerEye": "Resolution Per Eye",
 	"Settings_PerApplication_ChooseApplication": "選擇一款應用程式",
-	"Settings_PerApplication_AppResTitle": " ",
-	"Settings_PerApplication_AppResHeader": "此設定為左方「影像」分頁目前全域應用程式解析度設定的乘數。可能需要重新啟動此應用程式，設定才會生效。（預設為 100%）",
-	"Settings_PerApplication_AppResFooter": "目前各眼的彩現設定為 %1$s",
+	"Settings_PerApplication_AppResTitle": "Custom Resolution Multiplier",
+	"Settings_PerApplication_AppResHeader": "This setting is a multiplier on top of the current global application resolution setting on the %1$s tab to the left. This application may need to be restarted for settings to take effect. (Default is 100%)",
 	"Settings_PerApplication_OverlayVisibleHeader": "內崁介面應用程式可從 SteamVR 主控台的分頁取用。",
 	"Settings_PerApplication_OverlayVisibleCheckbox": "SteamVR 啟動時開啟此內崁介面應用程式。",
 	"Settings_PerApplication_DashboardSuffix": "（內崁介面應用程式）",
@@ -147,18 +160,26 @@
 	"Settings_PerApplication_MotionSmoothing_AlwaysOn": "永遠啟用力度",
 	"Settings_PerApplication_MotionSmoothing_AlwaysOn_Desc": "警告：應用程式將原先幀率的一半執行",
 	"Settings_PerApplication_MotionSmoothing_Checkbox": "為此應用程式啟用動態平滑",
+	"Settings_PerApplication_Reprojection_Header": "Reprojection",
+	"Settings_PerApplication_Reprojection_Checkbox": "Use Legacy Reprojection Mode",
+	"Settings_PerApplication_Reprojection_Description": "Checking this option will disable asynchronous reprojection for this title.",
+	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Override global refresh rate setting for this application",
+	"Settings_Perapplication_RefreshRateOverride_Description": "Checking this option will allow specifying a different refresh rate from the global setting for this application.",
 	"Settings_MimeTypes_Pancake_Header": "選擇用以啟動 2D 應用程式的應用程式",
 	"Settings_Camera_EnableCamera": "啟用鏡頭",
 	"Settings_Camera_AllowCameraInDashboard": "於主控台內顯示鏡頭",
 	"Settings_Camera_AllowCameraInDashboard_Desc": "主控台開啟時，顯示位於控制器上方的鏡頭視窗。",
-	"Settings_Camera_AllowCameraForChaperoneBounds": "使用鏡頭加強 Chaperone 導護系統",
+	"Settings_Camera_AllowCameraForChaperoneBounds": "Show Camera at Chaperone Edge",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
-	"Settings_Camera_AllowCameraForRoomView": "啟用房間視角（按兩下「系統鍵」）",
+	"Settings_Camera_AllowCameraForRoomView": "Enable Room View",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "按兩下「系統鍵」即可隨時進入房間視角",
 	"Settings_Camera_Compatibility": "鏡頭頻率",
+	"Settings_Camera_Rate_Hz": "Camera Rate (Hz)",
 	"Settings_Camera_CompatibilityExplanation": "若在使用時失去定位，您可能需將鏡頭頻率調低、禁用鏡頭，或換到其他的 USB 連接埠。",
 	"Advanced_Appearance": "外觀",
 	"Settings_Appearance_Background": "背景",
+	"Settings_Appearance_Background_NoSteam": "Launch Steam to see any any additional backgrounds.",
+	"Settings_Appearance_Background_Select": "Change Background",
 	"Settings_Appearance_BackgroundDesc": "請選擇預設空間的背景",
 	"Settings_Appearance_UseDomeProjection": "使用圓頂投影",
 	"Settings_Appearance_UseDomeProjectionDesc": "更改背景圖片的投影樣式。有些背景圖片可透過此功能提高體驗的沉浸感。如果您選擇的背景看起來有些扭曲，請嘗試啟用此功能。",
@@ -166,24 +187,34 @@
 	"Settings_Appearance_DomeCameraHeightDesc": "調整鏡頭相對於背景的高度",
 	"Settings_Appearance_DomeCameraRadius": "圓頂半徑",
 	"Settings_Appearance_DomeCameraRadiusDesc": "變更圓頂的大小",
-	"Settings_Appearance_PlayAreaColor": "遊玩範圍",
+	"Settings_Appearance_ResetDomeProjectionSettings": "Reset Dome Projection to Default",
 	"Settings_Appearance_PlayAreaColorDesc": "調整遊玩範圍的風格。您可以在遊戲載入時，或停用 SteamVR 家測試版後看到。",
+	"Settings_Appearance_PlayArea_FloorColor": "Play Area Floor Color",
 	"Settings_Appearance_MoreEnvironments": "取得更多 SteamVR 家的場景",
-	"Settings_Power_ReturnToWatchdogTimeout": "至此之後離開 SteamVR",
+	"Settings_Power_ReturnToWatchdogTimeout": "至此之後結束 SteamVR：",
 	"Settings_Power_TurnOffScreensTimeout": "至此之後關閉畫面",
 	"Settings_Power_TurnOffControllersTimeout": "至此之後關閉控制器",
-	"Settings_Power_ControllerOffOnExit": "離開 SteamVR 時關閉控制器。",
-	"Settings_General_DoNotDisturb_Text": "在 VR 中時攔截通知",
+	"Settings_Power_ControllerOffOnExit": "結束 SteamVR 時關閉控制器。",
+	"Settings_General_Notifications_Label": "Notifications",
+	"Settings_General_Notifications_Text": "Allow notifications while in VR",
 	"Settings_General_ShowBindingUI": "修改控制器配置",
 	"Settings_General_ShowTrackerUI": "管理 Vive 移動定位器",
 	"Settings_General_Cancel": "取消",
 	"Settings_General_Confirm": "確認",
+	"Settings_General_Close": "Close",
 	"Settings_General_CalibrateThumbstick": "校準",
+	"Settings_General_CalibrateThumbstick_ConnectAController": "Connect a controller with a thumbstick.",
 	"Settings_General_NotEnoughSamples": "請至少再按壓搖桿 %1$s 下以完成校準。",
-	"Settings_General_InviteMoreSamples": "計算出的角度為 %1$s 度。保持按壓以微調該數值，或按下「確認」接受這次校準。",
-	"Settings_General_LeftThumbstickAngle": "左搖桿角度：%1$s 度",
-	"Settings_General_RightThumbstickAngle": "右搖桿角度：%1$s 度",
-	"Settings_Dashboard_ShowProgressIndicator": "顯示長壓動作的進度標示",
+	"Settings_General_InviteMoreSamples": "Calculated angle of %1$s°. Keep pressing up to refine that value or press Confirm to accept this calibration.",
+	"Settings_General_LeftThumbstickAngle": "Left Thumbstick Angle: %1$s°",
+	"Settings_General_RightThumbstickAngle": "Right Thumbstick Angle: %1$s°",
+	"Settings_General_LeftThumbstickAngle_NoValue": "Left Thumbstick Angle",
+	"Settings_General_RightThumbstickAngle_NoValue": "Right Thumbstick Angle",
+	"Settings_Dashboard_ShowProgressIndicator": "Long-press progress indicator",
+	"Settings_Dashboard_Position": "Dashboard Position",
+	"Settings_Classic": "Classic",
+	"Settings_Near": "Near (beta)",
+	"Settings_DesktopScale": "Desktop Scale",
 	"SettingsTime_5s": "5 秒",
 	"SettingsTime_30s": "30 秒",
 	"SettingsTime_1m": "1 分鐘",
@@ -195,12 +226,63 @@
 	"SettingsTime_Never": "永不",
 	"Settings_Appearance_CycleBackgroundImageTimeSec": "至此之後變更背景：",
 	"Settings_Chaperone_BoundsColor": "顏色",
-	"Settings_Chaperone_BoundsAlpha": "Alpha",
+	"Settings_Chaperone_BoundsTransparency": "Transparency",
+	"Settings_Chaperone_Color": "Chaperone Color",
 	"Settings_Appearance_Controller": "變更控制器模型",
 	"Settings_Appearance_Base": "變更定位器模型",
 	"Settings_Appearance_Environment": "變更家場景",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOn": "永遠顯示地面邊界",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOnDesc": " ",
-	"Settings_Connecting": "正在等待 SteamVR 啟動...",
-	"Settings_ResetToDefault": "重設為預設值"
+	"Settings_Loading": "Loading...",
+	"Settings_ResetToDefault": "重設為預設值",
+	"Settings_ResetPageToDefault": "Reset Page To Default",
+	"Settings_ToggleButton_On": "On",
+	"Settings_ToggleButton_Off": "Off",
+	"Settings_ToggleButton_Disable": "Disable",
+	"Settings_ToggleButton_Enable": "Enable",
+	"Settings_Header_SteamVR": "SteamVR Settings",
+	"Settings_CameraTest": "Test camera and performance",
+	"Settings_StartCameraTest": "Start Test",
+	"Settings_StopCameraTest": "Stop Test",
+	"CameraTest_CheckingCamera": "Checking camera...",
+	"CameraTest_CheckingTracking": "Checking tracking with camera...",
+	"CameraTest_CameraFailed": "Camera communication failed",
+	"CameraTest_TrackingFailed": "Tracking failed with camera enabled",
+	"CameraTest_Success": "Camera Test Passed",
+	"CameraTestStatus_Evaluating": "Checking",
+	"CameraTestStatus_Success": "Success",
+	"CameraTestStatus_Failure": "Failed",
+	"Settings_CameraChaperone_RoomViewMode": "Room View Camera Mode",
+	"CameraRoomViewMode_EdgeA": "Colored Edges",
+	"CameraRoomViewMode_EdgeB": "Colored Ghosts",
+	"CameraRoomViewMode_VideoTranslucent": "Translucent Pass-Through",
+	"CameraRoomViewMode_VideoOpaque": "Opaque Pass-Through",
+	"Settings_MustRestart_Description": "SteamVR must be restarted for some changes to take effect.",
+	"Settings_MustRestart_RestartSteamVR_Button": "Restart SteamVR",
+	"Settings_NotSupported": "Not Supported",
+	"Settings_AdvancedSettings": "Advanced Settings",
+	"Settings_Show": "Show",
+	"Settings_Hide": "Hide",
+	"Settings_ViveTracker": "Vive Tracker",
+	"Settings_ViveTrackers": "Vive Trackers",
+	"Settings_ViveTracker_Role": "Tracker Role",
+	"Settings_ViveTracker_Hand": "Hand",
+	"Settings_ViveTracker_Identify_NotConnected": "Vive Tracker isn't connected.",
+	"Settings_ViveTracker_Identify_NotIdentifiable": "Vive Tracker isn't capable of identification.",
+	"Settings_ViveTracker_Connected": "Connected",
+	"Settings_ViveTracker_Disconnected": "Disconnected",
+	"Settings_PerApplication_VideoSettings": "Per-Application Video Settings",
+	"Settings_ChooseStartupOverlayApps": "Choose Startup Overlay Apps",
+	"Settings_StartTheseOverlayAppsOnLaunch": "Start These Overlay Apps On Launch:",
+	"Settings_ActiveController": "Active Controller",
+	"Settings_EditBinding": "Edit This Binding",
+	"Settings_EditBinding_ChooseAnother": "Choose Another",
+	"Settings_ShowLegacyBindingsEditor": "Show Legacy Bindings Editor",
+	"Settings_ManageVideoSettingsForApp": "Manage Video Settings For:",
+	"Settings_ManageControllerBindingSettingsForApp": "Manage Controller Bindings For:",
+	"Settings_ActiveControllerBinding": "Active Controller Binding",
+	"Settings_ActiveBinding": "Active Binding",
+	"Settings_ShowThumbstickSettings": "Edit Thumbstick Settings",
+	"Settings_ThumbstickSettings": "Thumbstick Settings",
+	"Settings_Number_Selected": "%1$s Selected"
 }
