--- a/resources/webinterface/dashboard/localization/webhelper_brazilian.json
+++ b/resources/webinterface/dashboard/localization/webhelper_brazilian.json
@@ -18,7 +18,7 @@
 	"PowerMenuTurnOffController": "Desligar controle",
 	"PowerMenuQuitSceneApp": "Sair de %1$s",
 	"PowerMenuQuitSceneApp_NoApp": "Sair do aplicativo",
-	"PowerMenuExitVR": "Sair da R.V.",
+	"PowerMenuExitVR": "Sair da RV",
 	"PowerMenuCancel": "Cancelar",
 	"PowerMenuHeader": "Menu de inicialização",
 	"IPD_Description": "Distância entre as lentes",
