--- a/resources/webinterface/dashboard/localization/webhelper_tchinese.json
+++ b/resources/webinterface/dashboard/localization/webhelper_tchinese.json
@@ -16,9 +16,9 @@
 	"Settings": "設定",
 	"PowerMenuResetSeatedPosition": "重設就座狀態",
 	"PowerMenuTurnOffController": "關閉控制器",
-	"PowerMenuQuitSceneApp": "離開 %1$s",
-	"PowerMenuQuitSceneApp_NoApp": "Exit App",
-	"PowerMenuExitVR": "離開 VR",
+	"PowerMenuQuitSceneApp": "結束 %1$s",
+	"PowerMenuQuitSceneApp_NoApp": "結束應用程式",
+	"PowerMenuExitVR": "結束 VR",
 	"PowerMenuCancel": "取消",
 	"PowerMenuHeader": "電源選單",
 	"IPD_Description": "鏡片間距",
