--- a/resources/webinterface/dashboard/localization/bindingui_danish.json
+++ b/resources/webinterface/dashboard/localization/bindingui_danish.json
@@ -32,6 +32,7 @@
   "SourceInputMode_Position": "Position",
   "SourceInputMode_Pull": "Træk",
   "SourceInputMode_Force": "Gennemtving",
+  "SourceInputMode_Proximity": "Nærhed",
   "SourceInputMode_Edit": "Rediger",
   "SourceInputMode_AddMode": "Tilføj",
   "SourceInputMode_Delete": "Slet",
@@ -102,8 +103,8 @@
   "SourceInputMode_ButtonModeInputForce_Click": "Generer klik fra:",
   "SourceInputMode_Grab": "Løft",
   "SourceInputMode_CapsenseEnableThreshold": "Tærskel for aktivering af kapacitiv sensor:",
-  "SourceInputMode_ValueHoldThreshold": "Holdetærskel:",
-  "SourceInputMode_ValueReleaseThreshold": "Slippetærskel:",
+  "SourceInputMode_GrabThreshold": "Grebstærskel:",
+  "SourceInputMode_ReleaseThreshold": "Slippetærskel:",
   "SourceInputMode_ForceHoldThreshold": "Gennemtving holdetærskel:",
   "SourceInputMode_ForceReleaseThreshold": "Gennemtving slippetærskel:",
   "SourceInputMode_DowngradeSpeed": "Nedgraderingshastighed:",
@@ -281,10 +282,14 @@
   "TrackerEditor_SelectControllerRole": "Hvilke hænder:",
   "DisplaySettings_Title": "Skærmindstillinger",
   "DisplaySettings_DisplayBrightness": "Skærmlysstyrke",
+  "DisplaySettings_IndexColumnCorrection": "Index Display Column Correction",
   "DisplaySettings_ColumnCorrection": "Kolonnekorrigering",
   "DisplaySettings_ColumnCorrectionDesc": "Kolonnekorrigering reducerer den vertikale \"skærmdørseffekt\", når hovedet bevæges. De fleste brugere lader det være slået til med finjustering på 0.",
+  "DisplaySettings_ColumnCorrectionEdit": "Edit",
   "DisplaySettings_Error_FirmwareUpdateNeeded": "Der kræves en firmwareopdatering for at slå tilpasning af skærmindstillinger til.",
   "DisplaySettings_EnableColumnCorrection": "Kolonnekorrigering",
+  "DisplaySettings_ColumnCorrectionOff": "Off",
+  "DisplaySettings_ColumnCorrectionAuto": "Auto",
   "DisplaySettings_AdvancedSettings": "Avancerede indstillinger",
   "DisplaySettings_ShowAdvancedSettings": "Vis avancerede indstillinger",
   "DisplaySettings_HideAdvancedSettings": "Skjul avancerede indstillinger",
