--- a/resources/webinterface/dashboard/localization/bindingui_dutch.json
+++ b/resources/webinterface/dashboard/localization/bindingui_dutch.json
@@ -32,6 +32,7 @@
   "SourceInputMode_Position": "Positie",
   "SourceInputMode_Pull": "Trekken",
   "SourceInputMode_Force": "Drukken",
+  "SourceInputMode_Proximity": "Nabijheid",
   "SourceInputMode_Edit": "Bewerken",
   "SourceInputMode_AddMode": "Toevoegen",
   "SourceInputMode_Delete": "Verwijderen",
@@ -102,8 +103,8 @@
   "SourceInputMode_ButtonModeInputForce_Click": "Klik genereren van:",
   "SourceInputMode_Grab": "Pakken",
   "SourceInputMode_CapsenseEnableThreshold": "Drempel CapSense inschakelen:",
-  "SourceInputMode_ValueHoldThreshold": "Drempel waarde vasthouden:",
-  "SourceInputMode_ValueReleaseThreshold": "Drempel waarde loslaten:",
+  "SourceInputMode_GrabThreshold": "Grijpdrempel:",
+  "SourceInputMode_ReleaseThreshold": "Loslaatdrempel:",
   "SourceInputMode_ForceHoldThreshold": "Drempel geforceerd vasthouden:",
   "SourceInputMode_ForceReleaseThreshold": "Drempel geforceerd loslaten:",
   "SourceInputMode_DowngradeSpeed": "Verlagingssnelheid:",
@@ -281,10 +282,14 @@
   "TrackerEditor_SelectControllerRole": "Welke handen:",
   "DisplaySettings_Title": "Weergave-instellingen",
   "DisplaySettings_DisplayBrightness": "Helderheid van weergave",
+  "DisplaySettings_IndexColumnCorrection": "Index Display Column Correction",
   "DisplaySettings_ColumnCorrection": "Kolomcorrectie",
   "DisplaySettings_ColumnCorrectionDesc": "Kolomcorrectie vermindert verticale 'screendoor' tijdens hoofdbewegingen. We raden aan om het ingeschakeld te houden, met een bijstelling van 0.",
+  "DisplaySettings_ColumnCorrectionEdit": "Edit",
   "DisplaySettings_Error_FirmwareUpdateNeeded": "Een firmware-update is vereist om aanpassingen aan weergave-instellingen te kunnen doen.",
   "DisplaySettings_EnableColumnCorrection": "Kolomcorrectie",
+  "DisplaySettings_ColumnCorrectionOff": "Off",
+  "DisplaySettings_ColumnCorrectionAuto": "Auto",
   "DisplaySettings_AdvancedSettings": "Geavanceerde instellingen",
   "DisplaySettings_ShowAdvancedSettings": "Geavanceerde instellingen weergeven",
   "DisplaySettings_HideAdvancedSettings": "Geavanceerde instellingen verbergen",
