--- a/resources/webinterface/dashboard/localization/bindingui_french.json
+++ b/resources/webinterface/dashboard/localization/bindingui_french.json
@@ -32,6 +32,7 @@
   "SourceInputMode_Position": "Position",
   "SourceInputMode_Pull": "Tirer",
   "SourceInputMode_Force": "Force",
+  "SourceInputMode_Proximity": "Proximité",
   "SourceInputMode_Edit": "Modifier",
   "SourceInputMode_AddMode": "Ajouter",
   "SourceInputMode_Delete": "Supprimer",
@@ -102,8 +103,8 @@
   "SourceInputMode_ButtonModeInputForce_Click": "Générer un clic à partir de :",
   "SourceInputMode_Grab": "Attraper",
   "SourceInputMode_CapsenseEnableThreshold": "Seuil d'activation de la détection capacitive :",
-  "SourceInputMode_ValueHoldThreshold": "Valeur du seuil de maintien :",
-  "SourceInputMode_ValueReleaseThreshold": "Valeur du seuil de relâchement :",
+  "SourceInputMode_GrabThreshold": "Seuil de saisie :",
+  "SourceInputMode_ReleaseThreshold": "Seuil de relâchement :",
   "SourceInputMode_ForceHoldThreshold": "Seuil de la force de maintien :",
   "SourceInputMode_ForceReleaseThreshold": "Seuil de la force de relâchement :",
   "SourceInputMode_DowngradeSpeed": "Vitesse de régression :",
@@ -281,10 +282,14 @@
   "TrackerEditor_SelectControllerRole": "Main :",
   "DisplaySettings_Title": "Paramètres d'affichage",
   "DisplaySettings_DisplayBrightness": "Luminosité de l'affichage",
+  "DisplaySettings_IndexColumnCorrection": "Index Display Column Correction",
   "DisplaySettings_ColumnCorrection": "Correction des colonnes",
   "DisplaySettings_ColumnCorrectionDesc": "La correction des colonnes réduit l'effet de grille lors des mouvements de tête. Nous vous recommandons de laisser cette option activée avec un ajustement de 0.",
+  "DisplaySettings_ColumnCorrectionEdit": "Edit",
   "DisplaySettings_Error_FirmwareUpdateNeeded": "Une mise à jour du firmware est nécessaire pour personnaliser les paramètres d'affichage.",
   "DisplaySettings_EnableColumnCorrection": "Correction des colonnes",
+  "DisplaySettings_ColumnCorrectionOff": "Off",
+  "DisplaySettings_ColumnCorrectionAuto": "Auto",
   "DisplaySettings_AdvancedSettings": "Paramètres avancés",
   "DisplaySettings_ShowAdvancedSettings": "Afficher les paramètres avancés",
   "DisplaySettings_HideAdvancedSettings": "Masquer les paramètres avancés",
