--- a/resources/webinterface/dashboard/localization/bindingui_german.json
+++ b/resources/webinterface/dashboard/localization/bindingui_german.json
@@ -32,6 +32,7 @@
   "SourceInputMode_Position": "Position",
   "SourceInputMode_Pull": "Ziehen",
   "SourceInputMode_Force": "Erzwingen",
+  "SourceInputMode_Proximity": "Nähe",
   "SourceInputMode_Edit": "Bearbeiten",
   "SourceInputMode_AddMode": "Hinzufügen",
   "SourceInputMode_Delete": "Löschen",
@@ -102,8 +103,8 @@
   "SourceInputMode_ButtonModeInputForce_Click": "Erzeuge Klick von:",
   "SourceInputMode_Grab": "Greifen",
   "SourceInputMode_CapsenseEnableThreshold": "CapSense-Aktivierungsschwelle:",
-  "SourceInputMode_ValueHoldThreshold": "Schwellenwert Halten:",
-  "SourceInputMode_ValueReleaseThreshold": "Schwellenwert Freigeben:",
+  "SourceInputMode_GrabThreshold": "Schwellenwert Greifen:",
+  "SourceInputMode_ReleaseThreshold": "Schwellenwert Freigeben:",
   "SourceInputMode_ForceHoldThreshold": "Schwellenwert Halten erzwingen:",
   "SourceInputMode_ForceReleaseThreshold": "Schwellenwert Freigeben erzwingen:",
   "SourceInputMode_DowngradeSpeed": "Geschwindigkeit herabstufen:",
@@ -281,10 +282,14 @@
   "TrackerEditor_SelectControllerRole": "Welche Hände:",
   "DisplaySettings_Title": "Anzeigeeinstellungen",
   "DisplaySettings_DisplayBrightness": "Anzeigehelligkeit",
+  "DisplaySettings_IndexColumnCorrection": "Index Display Column Correction",
   "DisplaySettings_ColumnCorrection": "Pixelspaltenkorrektur",
   "DisplaySettings_ColumnCorrectionDesc": "Die Pixelspaltenkorrektur mindert den häufig bei Kopfbewegungen auftretenden vertikalen Fliegengittereffekt. Für die meisten Benutzer empfiehlt es sich, die Funktion aktiviert zu lassen und die Feinabstimmung auf 0 zu setzen.",
+  "DisplaySettings_ColumnCorrectionEdit": "Edit",
   "DisplaySettings_Error_FirmwareUpdateNeeded": "Zur Aktivierung der benutzerdefinierten Anzeigeeinstellungen ist ein Firmwareupdate erforderlich.",
   "DisplaySettings_EnableColumnCorrection": "Pixelspaltenkorrektur",
+  "DisplaySettings_ColumnCorrectionOff": "Off",
+  "DisplaySettings_ColumnCorrectionAuto": "Auto",
   "DisplaySettings_AdvancedSettings": "Erweiterte Optionen",
   "DisplaySettings_ShowAdvancedSettings": "Erweiterte Optionen anzeigen",
   "DisplaySettings_HideAdvancedSettings": "Erweiterte Optionen verstecken",
