--- a/resources/webinterface/dashboard/localization/bindingui_italian.json
+++ b/resources/webinterface/dashboard/localization/bindingui_italian.json
@@ -32,6 +32,7 @@
   "SourceInputMode_Position": "Posizione",
   "SourceInputMode_Pull": "Trascina",
   "SourceInputMode_Force": "Forza",
+  "SourceInputMode_Proximity": "Prossimità",
   "SourceInputMode_Edit": "Modifica",
   "SourceInputMode_AddMode": "Aggiungi",
   "SourceInputMode_Delete": "Elimina",
@@ -102,8 +103,8 @@
   "SourceInputMode_ButtonModeInputForce_Click": "Genera clic da:",
   "SourceInputMode_Grab": "Afferra",
   "SourceInputMode_CapsenseEnableThreshold": "Soglia di attivazione di Capsense:",
-  "SourceInputMode_ValueHoldThreshold": "Soglia di mantenimento:",
-  "SourceInputMode_ValueReleaseThreshold": "Soglia di rilascio:",
+  "SourceInputMode_GrabThreshold": "Limite per afferrare:",
+  "SourceInputMode_ReleaseThreshold": "Limite per rilasciare:",
   "SourceInputMode_ForceHoldThreshold": "Soglia della forza di mantenimento:",
   "SourceInputMode_ForceReleaseThreshold": "Soglia della forza di rilascio:",
   "SourceInputMode_DowngradeSpeed": "Velocità di retrocessione:",
@@ -281,10 +282,14 @@
   "TrackerEditor_SelectControllerRole": "Mano:",
   "DisplaySettings_Title": "Impostazioni dello schermo",
   "DisplaySettings_DisplayBrightness": "Luminosità dello schermo",
+  "DisplaySettings_IndexColumnCorrection": "Index Display Column Correction",
   "DisplaySettings_ColumnCorrection": "Correzione delle colonne",
   "DisplaySettings_ColumnCorrectionDesc": "La correzione delle colonne riduce l'effetto verticale \"porta a rete\" quando si muove la testa. La maggior parte degli utenti dovrebbero lasciare l'opzione attiva, con un valore di 0.",
+  "DisplaySettings_ColumnCorrectionEdit": "Edit",
   "DisplaySettings_Error_FirmwareUpdateNeeded": "È necessario aggiornare il firmware per abilitare la personalizzazione delle impostazioni dello schermo.",
   "DisplaySettings_EnableColumnCorrection": "Correzione delle colonne",
+  "DisplaySettings_ColumnCorrectionOff": "Off",
+  "DisplaySettings_ColumnCorrectionAuto": "Auto",
   "DisplaySettings_AdvancedSettings": "Impostazioni avanzate",
   "DisplaySettings_ShowAdvancedSettings": "Mostra impostazioni avanzate",
   "DisplaySettings_HideAdvancedSettings": "Nascondi impostazioni avanzate",
