--- a/resources/webinterface/dashboard/localization/vrmonitor_japanese.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_japanese.json
@@ -4,6 +4,17 @@
 	"VRMonitor_Nav_Settings": "設定",
 	"VRMonitor_Nav_Help": "ヘルプ",
 	"VRMonitor_Nav_Developer": "開発者",
+	"Settings_ControllerSettings": "Controller Settings",
+	"Settings_Controller_ShowBindingCallouts": "Show Binding On Controllers",
+	"Settings_Controller_ShowBindingCalloutsInVR": "Show Binding On Controllers in VR",
+	"Settings_Controller_AdvancedControllerSettings": "Manage Controller Bindings",
+	"Settings_Controller_ControllerBindingPrompt": "Controller Binding",
+	"Settings_Controller_DefaultBinding": "Default",
+	"Settings_Controller_CustomBinding": "Custom",
+	"Settings_ThumbstickDeadzone_Text": "サムスティックのデッドゾーン",
+	"Settings_ThumbstickDeadzone_Desc": "Adjust the deadzone on all thumbsticks.",
+	"Settings_Loading_CurrentBinding": "Loading current binding...",
+	"Settings_NeedSteamTo_ViewAndEditBindings": "Launch Steam to view and edit bindings.",
 	"VRMonitor_Overview_SystemStatus_Title": "システムステータス",
 	"VRMonitor_Overview_DeviceStatus_Title": "デバイスステータス",
 	"VRMonitor_Overview_Notifications_Title": "通知",
@@ -29,15 +40,17 @@
 	"VRMonitor_DevNav_Console": "コンソール",
 	"VRMonitor_DevNav_RoomOverview": "ルーム概観",
 	"VRMonitor_DevNav_Files": "ファイル",
-	"Settings_Audio_On": "SteamVR使用時...",
-	"Settings_Audio_AudioPlay": "再生デバイスを設定：",
-	"Settings_Audio_AudioRecord": "録音デバイスを設定：",
-	"Settings_Audio_Off": "SteamVRを終了時...",
-	"Settings_Audio_HDMIGain": "Vive HDMIオーディオのゲインリダクションを有効化",
-	"Settings_Audio_LeaveAlone": "（デバイスを変更しない）",
-	"Settings_Audio_AudioMirrorPlay": "デバイスにオーディオをミラーする",
-	"Settings_Audio_AudioMirrorUnsupported": "このプラットフォームは音声のミラーリングをサポートしていません",
-	"Settings_Audio_NoMirror": "（ミラーしない）",
+	"Settings_SelectAnOption": "Select an option...",
+	"Settings_BluetoothSettings": "Bluetooth Settings",
+	"Settings_BaseStationSettings": "Base Station Settings",
+	"Settings_Audio_Playback_Automatic_Label": "Audio output device",
+	"Settings_Audio_Recording_Automatic_Label": "Audio input device",
+	"Settings_Audio_Headset": "Headset",
+	"Settings_Audio_Manual": "Manual",
+	"Settings_Audio_Mirroring_Label": "Audio mirroring",
+	"Settings_Audio_Default": "Default",
+	"Settings_Audio_Current_Setting_Unknown": "(Currently selected device is not present)",
+	"Settings_Audio_HDMIGain": "Gain reduction on VIVE HDMI Audio",
 	"Settings_SectionTitle_Advanced": "詳細",
 	"Settings_SectionTitle_Developer": "開発者",
 	"Settings_SectionTitle_General": "一般",
@@ -47,14 +60,15 @@
 	"Settings_SectionTitle_Camera": "カメラ",
 	"Settings_SectionTitle_Bluetooth": "ブルートゥース",
 	"Settings_SectionTitle_Power": "電源",
-	"Settings_SectionTitle_Internal": "内部",
+	"Settings_SectionTitle_StartupShutdown": "Startup / Shutdown",
 	"Settings_SectionTitle_Home": "ホーム",
-	"Settings_SectionTitle_Chaperone": "シャペロン",
+	"Settings_SectionTitle_PlayArea": "Play Area",
 	"Settings_SectionTitle_BaseStation": "ベースステーション",
+	"Settings_SectionTitle_Controller": "Controllers",
 	"Advanced_AllowSavingOfTimingInfo": "タイミング情報の保存を許可",
 	"Advanced_AutoSaveTimingInfoOnExit": "終了時にタイミング情報を自動で保存",
 	"Settings_EnableWebHelperDebugger": "WebHelperデバッガーを有効化",
-	"Settings_EnableWebHelperDebuggerDesc": "Chromium開発ツールとデバッガーを埋め込みChromiumページにアタッチするために、デバッグサーバーを有効にします。SteamVRの再起動が必要です。",
+	"Settings_EnableWebHelperDebuggerDesc": "Enables debugging server for attaching Chromium dev tools and debugger to embedded Chromium pages. It's always enabled on Perforce builds.",
 	"Advanced_PerfGraphInHMD": "ヘッドセットにGPUパフォーマンスのグラフを表示",
 	"Advanced_SaveFrameDataNow": "フレームデータを保存",
 	"Explanation_DisableEnhancedPowerManagement": "原因不明のトラッキング停止やワイヤレスコントローラのペアリング失敗などの問題が発生する場合は、SteamVR USBデバイスに関するWindowsの高度な電源管理を無効化してください。 ",
@@ -70,38 +84,35 @@
 	"MenuAction_ResetDismissableWarnings": "警告をリセット",
 	"MenuAction_SetConfigDirectory": "設定ディレクトリを設定",
 	"MenuAction_SetLogDirectory": "ログディレクトリを設定",
-	"Settings_Advanced_AllowSupersampleFiltering": "高度なスーパーサンプルフィルターを有効化",
+	"Settings_Advanced_AllowSupersampleFiltering": "Advanced Supersample Filtering",
 	"Settings_Advanced_Paths_Header": "パス",
 	"Settings_Advanced_Reset_Header": "リセット",
 	"Settings_Advanced_Status_Header": "ステータス確認",
-	"Settings_ArcadeMode": "アーケードモードを有効化",
+	"Settings_ShowSettingsInDashboard": "Settings (VR Dashboard)",
 	"Settings_CheckForSteam": "Steamを確認",
 	"Settings_DebugInputBindings": "入力バインドユーザーインターフェイスのデバッグオプションを有効化",
-	"Settings_DoNotFadeToGrid": "アプリのハング時にグリッドにフェードアウトしない",
-	"Settings_EnableDashboard": "VRダッシュボードを有効化",
-	"Settings_HomeAppCheck": "SteamVRホームを使用",
+	"Settings_FadeToGrid": "Fade To Grid on app hang",
+	"Settings_EnableDashboard": "VR Dashboard",
+	"Settings_HomeAppCheck": "SteamVR Home",
 	"Settings_HomeAppDesc": "仮想環境やソーシャル機能などをお楽しみください。",
 	"Settings_LargeSpace": "大きなスペース",
 	"Settings_LockedModeCheck": "ロックモード",
 	"Settings_LockedModeDesc": "コンピューターがロックされている状態でヘッドセットへのレンダリングを許可する。",
+	"Settings_PauseOnStandby": "Pause VR when headset is idle",
+	"Settings_PauseOnLocked": "Pause VR when computer is locked",
 	"Settings_MediumSpace": "中くらいのスペース",
 	"Settings_NightModeCheck": "ナイトモード",
 	"Settings_NightModeDesc": "ヘッドセットを午前5:00まで（またはSteamVRが再起動されるまで）減光します。",
-	"Settings_NotificationDoNotDisturb_Info": "通知拒否が有効化されていると、着信通知は抑制されます。",
-	"Settings_NotificationDoNotDisturb_Text": "通知拒否",
-	"Settings_PauseOnStandby": "ヘッドセットがアイドル状態の時にレンダリングを一時停止する",
 	"Settings_ShowPlaylistMenu": "プレイリストメニューを表示",
 	"Settings_SmallSpace": "小さいスペース",
-	"Settings_StartSteamVROnAppLaunch": "アプリケーション立ち上げ時にSteamVRを起動",
 	"Settings_StatusWindowAlwaysOnTop_Info": " ",
-	"Settings_StatusWindowAlwaysOnTop_Text": "常に手前に表示",
+	"Settings_StatusWindowAlwaysOnTop_Text": "SteamVR Always on Top",
 	"Settings_StatusWindowMinimizeToTray_Text": "最小化時にSteamVRステータスはシステムトレイに最小化されます",
 	"Settings_SuppressWarnings_Text": "SteamVRステータスが最小化されている時は、警告やアラートを表示しない",
 	"StatusCheckInterval_Never": "なし",
 	"StatusCheckInterval_Normal": "普通（1秒）",
 	"StatusCheckInterval_Often": "頻繁（100ミリ秒）",
 	"StatusCheckInterval_Seldom": "時々（5秒）",
-	"Settings_ThumbstickDeadzone_Text": "サムスティックのデッドゾーン",
 	"Settings_KnockKnock_Button": "トントン",
 	"Settings_KnockKnock_Desc": "これによりVR外の人がヘッドセットをつけているユーザーの注意を引くことができます",
 	"Settings_CreateSystemReport_Button": "システムレポートを作成",
@@ -113,28 +124,30 @@
 	"Settings_Chaperone_Style_3": "詳細",
 	"Settings_Chaperone_Style_4": "床のみ",
 	"Settings_Video_RefreshRate_Header": "リフレッシュレート",
-	"Settings_Video_RefreshRate_HzSuffix": " hz",
+	"Settings_Video_RefreshRate_HzSuffix": " Hz",
+	"Settings_Video_RefreshRate_Label_Hz": "Refresh Rate (Hz)",
 	"Settings_Video_RefreshRate_NotFound": "お使いのHMDは追加のリフレッシュレートをサポートしていますが、グラフィックドライバーでは検出されませんでした。ヘッドセットのファームウェアとグラフィックドライバーが最新であることを確認してください。",
 	"Settings_Video_RefreshRate_NotAvailableExtended": "お使いのHMDは追加のリフレッシュレートをサポートしていますが、HMDが拡張モードの場合、SteamVRはリフレッシュレートを管理できません。",
 	"Settings_Video_RefreshRate_EnableDirectModeAction": "ダイレクトモードを有効化",
-	"Settings_Video_RestartNotice": "この保留中の変更は、SteamVRの再起動後に有効になります。",
-	"Settings_Video_RestartAction": "SteamVRを再起動",
+	"Settings_Video_RefreshRate_OneSupported": "Only one refresh rate is supported for your system.",
 	"Settings_Video_AppResFooter": "現在の設定は、片目あたり%1$sでレンダリングします",
 	"Settings_Advanced_MotionSmoothing_Header": "モーションスムージング",
 	"Settings_Advanced_MotionSmoothing_Description": "実行中のアプリケーションの処理が追い付かない場合に、良好な体験を維持するために新しいフレームを合成します。",
-	"Settings_Advanced_MotionSmoothing": "モーションスムージングを有効化",
 	"Settings_Advanced_MotionSmoothing_Disabled": "モーションスムージングには、非同期再投影のサポートが必要です。",
-	"Settings_Advanced_Supersampling_Header": "アプリケーション解像度",
+	"Settings_Advanced_Supersampling_Auto": "Auto",
+	"Settings_Advanced_Supersampling_Custom": "Custom",
+	"Settings_Advanced_Supersampling_Header": "Render Resolution",
 	"Settings_Advanced_Supersampling_Warning": "以下の設定は自動設定をオーバーライドし、すべてのアプリケーションに影響します。特定のアプリケーションの解像度は、アプリケーション設定で変更してください。",
+	"Settings_Advanced_Supersampling_WidthByHeight": "%1$s × %2$s",
 	"Settings_Advanced_SupersamplingManualOverride": "解像度の調整を有効化",
+	"Settings_Advanced_Supersampline_ResolutionPerEye": "Resolution Per Eye",
 	"Explanation_Supersampling_Header": "SteamVRはGPUの性能を基にアプリケーション解像度を自動的に設定します。",
 	"Explanation_Supersampling": "*一部のアプリケーションでは、設定を有効にするために再起動が必要な場合があります。",
 	"Explanation_SupersamplingFiltering": "スーパーサンプリングのフィルタオプション：",
-	"Settings_PerApplication_Header": "特定のアプリケーション用に独自のレンダリング設定を作成",
+	"Explanation_Supersampling_ResolutionPerEye": "Resolution Per Eye",
 	"Settings_PerApplication_ChooseApplication": "アプリケーションを選択",
-	"Settings_PerApplication_AppResTitle": " ",
-	"Settings_PerApplication_AppResHeader": "この設定は、左の「ビデオ」タブに表示される、現在のグローバルアプリケーション解像度設定に乗算されます。設定を有効にするには、アプリケーションを再起動する必要があります。（デフォルトは 100%）",
-	"Settings_PerApplication_AppResFooter": "現在の設定は、片目あたり%1$sでレンダリングします。",
+	"Settings_PerApplication_AppResTitle": "Custom Resolution Multiplier",
+	"Settings_PerApplication_AppResHeader": "This setting is a multiplier on top of the current global application resolution setting on the %1$s tab to the left. This application may need to be restarted for settings to take effect. (Default is 100%)",
 	"Settings_PerApplication_OverlayVisibleHeader": "オーバーレイアプリケーションは SteamVRダッシュボード内のタブで使用できます。",
 	"Settings_PerApplication_OverlayVisibleCheckbox": "SteamVR起動時にこのオーバーレイアプリケーションを開始する。",
 	"Settings_PerApplication_DashboardSuffix": "（オーバーレイアプリケーション）",
@@ -147,18 +160,26 @@
 	"Settings_PerApplication_MotionSmoothing_AlwaysOn": "常にONに強制設定",
 	"Settings_PerApplication_MotionSmoothing_AlwaysOn_Desc": "警告：アプリケーションは半分のフレームレートで実行されます。",
 	"Settings_PerApplication_MotionSmoothing_Checkbox": "このアプリケーションに対してモーションスムージングを有効化",
+	"Settings_PerApplication_Reprojection_Header": "Reprojection",
+	"Settings_PerApplication_Reprojection_Checkbox": "Use Legacy Reprojection Mode",
+	"Settings_PerApplication_Reprojection_Description": "Checking this option will disable asynchronous reprojection for this title.",
+	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Override global refresh rate setting for this application",
+	"Settings_Perapplication_RefreshRateOverride_Description": "Checking this option will allow specifying a different refresh rate from the global setting for this application.",
 	"Settings_MimeTypes_Pancake_Header": "2Dアプリケーションを起動するアプリケーションを選択",
 	"Settings_Camera_EnableCamera": "カメラを有効化",
 	"Settings_Camera_AllowCameraInDashboard": "ダッシュボードにカメラを表示",
 	"Settings_Camera_AllowCameraInDashboard_Desc": "ダッシュボードが表示されている時に、コントローラにアタッチされたカメラウィンドウを開く。",
-	"Settings_Camera_AllowCameraForChaperoneBounds": "シャペロン境界の拡張にカメラを使用",
+	"Settings_Camera_AllowCameraForChaperoneBounds": "Show Camera at Chaperone Edge",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
-	"Settings_Camera_AllowCameraForRoomView": "ルームビューを有効化（システムボタンをダブルクリック）",
+	"Settings_Camera_AllowCameraForRoomView": "Enable Room View",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "システムボタンのダブルクリックでいつでもルームビューにアクセス",
 	"Settings_Camera_Compatibility": "カメラレート",
+	"Settings_Camera_Rate_Hz": "Camera Rate (Hz)",
 	"Settings_Camera_CompatibilityExplanation": "トラッキングが停止した場合は、カメラレートを下げる、カメラを無効にする、または他のUSBポートを試してください。",
 	"Advanced_Appearance": "外観",
 	"Settings_Appearance_Background": "背景",
+	"Settings_Appearance_Background_NoSteam": "Launch Steam to see any any additional backgrounds.",
+	"Settings_Appearance_Background_Select": "Change Background",
 	"Settings_Appearance_BackgroundDesc": "デフォルト空間用に背景を選択",
 	"Settings_Appearance_UseDomeProjection": "ドーム投影を使用",
 	"Settings_Appearance_UseDomeProjectionDesc": "背景の投影スタイルを変更します。特定の背景では没入感を高めるためにこの機能を使用します。選択した背景が歪んで見える場合は、この機能を有効にしてください。",
@@ -166,24 +187,34 @@
 	"Settings_Appearance_DomeCameraHeightDesc": "背景に対してカメラの高さを調整",
 	"Settings_Appearance_DomeCameraRadius": "ドームの半径",
 	"Settings_Appearance_DomeCameraRadiusDesc": "ドームのサイズを変更する。",
-	"Settings_Appearance_PlayAreaColor": "プレイエリア",
+	"Settings_Appearance_ResetDomeProjectionSettings": "Reset Dome Projection to Default",
 	"Settings_Appearance_PlayAreaColorDesc": "プレイエリアのスタイルを調整。これは、ゲームの読み込み時、またはSteamVRホームベータを無効にした際に表示されます。",
+	"Settings_Appearance_PlayArea_FloorColor": "Play Area Floor Color",
 	"Settings_Appearance_MoreEnvironments": "SteamVRホーム環境をさらに入手",
 	"Settings_Power_ReturnToWatchdogTimeout": "次の期間が経過後SteamVRを終了：",
 	"Settings_Power_TurnOffScreensTimeout": "次の時間経過後にディスプレイの電源を切る：",
 	"Settings_Power_TurnOffControllersTimeout": "次の時間経過後にコントローラの電源を切る：",
 	"Settings_Power_ControllerOffOnExit": "SteamVR終了時にコントローラの電源を切る",
-	"Settings_General_DoNotDisturb_Text": "VR内で通知を表示しない",
+	"Settings_General_Notifications_Label": "Notifications",
+	"Settings_General_Notifications_Text": "Allow notifications while in VR",
 	"Settings_General_ShowBindingUI": "コントローラのバインドを編集",
 	"Settings_General_ShowTrackerUI": "Viveトラッカーの管理",
 	"Settings_General_Cancel": "キャンセル",
 	"Settings_General_Confirm": "確認",
+	"Settings_General_Close": "Close",
 	"Settings_General_CalibrateThumbstick": "キャリブレーション",
+	"Settings_General_CalibrateThumbstick_ConnectAController": "Connect a controller with a thumbstick.",
 	"Settings_General_NotEnoughSamples": "キャリブレーションを完了するために、最低%1$s回以上サムスティックを押してください。",
-	"Settings_General_InviteMoreSamples": "計算されたアングル%1$s度。押し続けて値を調整するか、または確認を押してこのキャリブレーションを適用します。",
-	"Settings_General_LeftThumbstickAngle": "左サムスティックのアングル：%1$s度",
-	"Settings_General_RightThumbstickAngle": "右サムスティックのアングル：%1$s度",
-	"Settings_Dashboard_ShowProgressIndicator": "長押しアクションで進行状況を表示",
+	"Settings_General_InviteMoreSamples": "Calculated angle of %1$s°. Keep pressing up to refine that value or press Confirm to accept this calibration.",
+	"Settings_General_LeftThumbstickAngle": "Left Thumbstick Angle: %1$s°",
+	"Settings_General_RightThumbstickAngle": "Right Thumbstick Angle: %1$s°",
+	"Settings_General_LeftThumbstickAngle_NoValue": "Left Thumbstick Angle",
+	"Settings_General_RightThumbstickAngle_NoValue": "Right Thumbstick Angle",
+	"Settings_Dashboard_ShowProgressIndicator": "Long-press progress indicator",
+	"Settings_Dashboard_Position": "Dashboard Position",
+	"Settings_Classic": "Classic",
+	"Settings_Near": "Near (beta)",
+	"Settings_DesktopScale": "Desktop Scale",
 	"SettingsTime_5s": "5秒",
 	"SettingsTime_30s": "30秒",
 	"SettingsTime_1m": "1分",
@@ -195,12 +226,63 @@
 	"SettingsTime_Never": "なし",
 	"Settings_Appearance_CycleBackgroundImageTimeSec": "次の時間経過後に背景を変更：",
 	"Settings_Chaperone_BoundsColor": "色",
-	"Settings_Chaperone_BoundsAlpha": "アルファ",
+	"Settings_Chaperone_BoundsTransparency": "Transparency",
+	"Settings_Chaperone_Color": "Chaperone Color",
 	"Settings_Appearance_Controller": "コントローラモデルの変更",
 	"Settings_Appearance_Base": "ベースステーションモデルの変更",
 	"Settings_Appearance_Environment": "ホーム環境の変更",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOn": "床の境界を常に表示",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOnDesc": " ",
-	"Settings_Connecting": "SteamVRを起動中...",
-	"Settings_ResetToDefault": "初期設定に戻す"
+	"Settings_Loading": "Loading...",
+	"Settings_ResetToDefault": "初期設定に戻す",
+	"Settings_ResetPageToDefault": "Reset Page To Default",
+	"Settings_ToggleButton_On": "On",
+	"Settings_ToggleButton_Off": "Off",
+	"Settings_ToggleButton_Disable": "Disable",
+	"Settings_ToggleButton_Enable": "Enable",
+	"Settings_Header_SteamVR": "SteamVR Settings",
+	"Settings_CameraTest": "Test camera and performance",
+	"Settings_StartCameraTest": "Start Test",
+	"Settings_StopCameraTest": "Stop Test",
+	"CameraTest_CheckingCamera": "Checking camera...",
+	"CameraTest_CheckingTracking": "Checking tracking with camera...",
+	"CameraTest_CameraFailed": "Camera communication failed",
+	"CameraTest_TrackingFailed": "Tracking failed with camera enabled",
+	"CameraTest_Success": "Camera Test Passed",
+	"CameraTestStatus_Evaluating": "Checking",
+	"CameraTestStatus_Success": "Success",
+	"CameraTestStatus_Failure": "Failed",
+	"Settings_CameraChaperone_RoomViewMode": "Room View Camera Mode",
+	"CameraRoomViewMode_EdgeA": "Colored Edges",
+	"CameraRoomViewMode_EdgeB": "Colored Ghosts",
+	"CameraRoomViewMode_VideoTranslucent": "Translucent Pass-Through",
+	"CameraRoomViewMode_VideoOpaque": "Opaque Pass-Through",
+	"Settings_MustRestart_Description": "SteamVR must be restarted for some changes to take effect.",
+	"Settings_MustRestart_RestartSteamVR_Button": "Restart SteamVR",
+	"Settings_NotSupported": "Not Supported",
+	"Settings_AdvancedSettings": "Advanced Settings",
+	"Settings_Show": "Show",
+	"Settings_Hide": "Hide",
+	"Settings_ViveTracker": "Vive Tracker",
+	"Settings_ViveTrackers": "Vive Trackers",
+	"Settings_ViveTracker_Role": "Tracker Role",
+	"Settings_ViveTracker_Hand": "Hand",
+	"Settings_ViveTracker_Identify_NotConnected": "Vive Tracker isn't connected.",
+	"Settings_ViveTracker_Identify_NotIdentifiable": "Vive Tracker isn't capable of identification.",
+	"Settings_ViveTracker_Connected": "Connected",
+	"Settings_ViveTracker_Disconnected": "Disconnected",
+	"Settings_PerApplication_VideoSettings": "Per-Application Video Settings",
+	"Settings_ChooseStartupOverlayApps": "Choose Startup Overlay Apps",
+	"Settings_StartTheseOverlayAppsOnLaunch": "Start These Overlay Apps On Launch:",
+	"Settings_ActiveController": "Active Controller",
+	"Settings_EditBinding": "Edit This Binding",
+	"Settings_EditBinding_ChooseAnother": "Choose Another",
+	"Settings_ShowLegacyBindingsEditor": "Show Legacy Bindings Editor",
+	"Settings_ManageVideoSettingsForApp": "Manage Video Settings For:",
+	"Settings_ManageControllerBindingSettingsForApp": "Manage Controller Bindings For:",
+	"Settings_ActiveControllerBinding": "Active Controller Binding",
+	"Settings_ActiveBinding": "Active Binding",
+	"Settings_ShowThumbstickSettings": "Edit Thumbstick Settings",
+	"Settings_ThumbstickSettings": "Thumbstick Settings",
+	"Settings_Number_Selected": "%1$s Selected"
 }
