--- a/resources/webinterface/dashboard/localization/vrmonitor_korean.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_korean.json
@@ -4,6 +4,17 @@
 	"VRMonitor_Nav_Settings": "설정",
 	"VRMonitor_Nav_Help": "도움말",
 	"VRMonitor_Nav_Developer": "개발자",
+	"Settings_ControllerSettings": "Controller Settings",
+	"Settings_Controller_ShowBindingCallouts": "Show Binding On Controllers",
+	"Settings_Controller_ShowBindingCalloutsInVR": "Show Binding On Controllers in VR",
+	"Settings_Controller_AdvancedControllerSettings": "Manage Controller Bindings",
+	"Settings_Controller_ControllerBindingPrompt": "Controller Binding",
+	"Settings_Controller_DefaultBinding": "Default",
+	"Settings_Controller_CustomBinding": "Custom",
+	"Settings_ThumbstickDeadzone_Text": "엄지스틱 데드존",
+	"Settings_ThumbstickDeadzone_Desc": "Adjust the deadzone on all thumbsticks.",
+	"Settings_Loading_CurrentBinding": "Loading current binding...",
+	"Settings_NeedSteamTo_ViewAndEditBindings": "Launch Steam to view and edit bindings.",
 	"VRMonitor_Overview_SystemStatus_Title": "시스템 상태",
 	"VRMonitor_Overview_DeviceStatus_Title": "기기 상태",
 	"VRMonitor_Overview_Notifications_Title": "알림",
@@ -29,15 +40,17 @@
 	"VRMonitor_DevNav_Console": "콘솔",
 	"VRMonitor_DevNav_RoomOverview": "방 개요",
 	"VRMonitor_DevNav_Files": "파일",
-	"Settings_Audio_On": "SteamVR 사용 시...",
-	"Settings_Audio_AudioPlay": "재생 장치 설정:",
-	"Settings_Audio_AudioRecord": "녹음 장치 설정:",
-	"Settings_Audio_Off": "SteamVR 종료 시...",
-	"Settings_Audio_HDMIGain": "Vive HDMI 오디오 게인 감소 활성화",
-	"Settings_Audio_LeaveAlone": "(장치를 바꾸지 마세요)",
-	"Settings_Audio_AudioMirrorPlay": "장치에 오디오 복제하기",
-	"Settings_Audio_AudioMirrorUnsupported": "오디오 복제는 이 플랫폼에서 지원되지 않습니다",
-	"Settings_Audio_NoMirror": "(복제 안 하기)",
+	"Settings_SelectAnOption": "Select an option...",
+	"Settings_BluetoothSettings": "Bluetooth Settings",
+	"Settings_BaseStationSettings": "Base Station Settings",
+	"Settings_Audio_Playback_Automatic_Label": "Audio output device",
+	"Settings_Audio_Recording_Automatic_Label": "Audio input device",
+	"Settings_Audio_Headset": "Headset",
+	"Settings_Audio_Manual": "Manual",
+	"Settings_Audio_Mirroring_Label": "Audio mirroring",
+	"Settings_Audio_Default": "Default",
+	"Settings_Audio_Current_Setting_Unknown": "(Currently selected device is not present)",
+	"Settings_Audio_HDMIGain": "Gain reduction on VIVE HDMI Audio",
 	"Settings_SectionTitle_Advanced": "고급",
 	"Settings_SectionTitle_Developer": "개발자",
 	"Settings_SectionTitle_General": "일반",
@@ -47,14 +60,15 @@
 	"Settings_SectionTitle_Camera": "카메라",
 	"Settings_SectionTitle_Bluetooth": "블루투스",
 	"Settings_SectionTitle_Power": "전원",
-	"Settings_SectionTitle_Internal": "내부",
+	"Settings_SectionTitle_StartupShutdown": "Startup / Shutdown",
 	"Settings_SectionTitle_Home": "홈",
-	"Settings_SectionTitle_Chaperone": "샤프롱",
+	"Settings_SectionTitle_PlayArea": "Play Area",
 	"Settings_SectionTitle_BaseStation": "베이스 스테이션",
+	"Settings_SectionTitle_Controller": "Controllers",
 	"Advanced_AllowSavingOfTimingInfo": "시간 정보 저장 허용",
 	"Advanced_AutoSaveTimingInfoOnExit": "종료 시 시간 정보 자동 저장",
 	"Settings_EnableWebHelperDebugger": "웹 도움말 디버거 활성화",
-	"Settings_EnableWebHelperDebuggerDesc": "Chromium 개발자 도구와 디버거를, 내장되어 있는 Chromium 페이지에 포함하기 위해 디버깅 서버를 사용할 수 있습니다. SteamVR을 다시 시작해야 합니다.",
+	"Settings_EnableWebHelperDebuggerDesc": "Enables debugging server for attaching Chromium dev tools and debugger to embedded Chromium pages. It's always enabled on Perforce builds.",
 	"Advanced_PerfGraphInHMD": "헤드셋에 GPU 성능 그래프 표시하기",
 	"Advanced_SaveFrameDataNow": "프레임 데이터 저장",
 	"Explanation_DisableEnhancedPowerManagement": "알 수 없는 이유로 추적이 끊기거나 무선 컨트롤러가 페어링되지 못한다면, SteamVR USB 장치에 대한 Windows의 강화된 전원 관리를 비활성화 하세요. ",
@@ -70,38 +84,35 @@
 	"MenuAction_ResetDismissableWarnings": "경고 초기화",
 	"MenuAction_SetConfigDirectory": "구성 디렉터리 설정",
 	"MenuAction_SetLogDirectory": "로그 디렉터리 설정",
-	"Settings_Advanced_AllowSupersampleFiltering": "고급 슈퍼샘플 필터링 활성화",
+	"Settings_Advanced_AllowSupersampleFiltering": "Advanced Supersample Filtering",
 	"Settings_Advanced_Paths_Header": "경로",
 	"Settings_Advanced_Reset_Header": "초기화",
 	"Settings_Advanced_Status_Header": "상태 검사",
-	"Settings_ArcadeMode": "아케이드 모드 활성화",
+	"Settings_ShowSettingsInDashboard": "Settings (VR Dashboard)",
 	"Settings_CheckForSteam": "Steam 확인",
 	"Settings_DebugInputBindings": "입력 바인딩 사용자 인터페이스 디버깅 옵션 활성화",
-	"Settings_DoNotFadeToGrid": "앱이 대기 중일 때 격자로 흐려지지 않음",
-	"Settings_EnableDashboard": "VR 대시보드 활성화",
-	"Settings_HomeAppCheck": "SteamVR Home 사용",
+	"Settings_FadeToGrid": "Fade To Grid on app hang",
+	"Settings_EnableDashboard": "VR Dashboard",
+	"Settings_HomeAppCheck": "SteamVR Home",
 	"Settings_HomeAppDesc": "가상 환경, 소셜 기능 및 그 외 여러 가지를 즐겨보세요.",
 	"Settings_LargeSpace": "큰 공간",
 	"Settings_LockedModeCheck": "잠금 모드",
 	"Settings_LockedModeDesc": "컴퓨터가 잠겨 있는 동안 헤드셋 렌더링 허용",
+	"Settings_PauseOnStandby": "Pause VR when headset is idle",
+	"Settings_PauseOnLocked": "Pause VR when computer is locked",
 	"Settings_MediumSpace": "중간 크기 공간",
 	"Settings_NightModeCheck": "야간 모드",
 	"Settings_NightModeDesc": "헤드셋이 오전 5시까지 어둡게 표시됩니다. SteamVR을 다시 시작하면 정상 모드로 돌아갑니다.",
-	"Settings_NotificationDoNotDisturb_Info": "방해 금지가 설정되어 있으면 수신 알림이 표시되지 않습니다.",
-	"Settings_NotificationDoNotDisturb_Text": "방해 금지",
-	"Settings_PauseOnStandby": "헤드셋이 유휴 상태일 때 렌더링 일시 정지",
 	"Settings_ShowPlaylistMenu": "재생 목록 메뉴 표시하기",
 	"Settings_SmallSpace": "작은 공간",
-	"Settings_StartSteamVROnAppLaunch": "애플리케이션 실행 시 SteamVR 시작",
 	"Settings_StatusWindowAlwaysOnTop_Info": " ",
-	"Settings_StatusWindowAlwaysOnTop_Text": "항상 위",
+	"Settings_StatusWindowAlwaysOnTop_Text": "SteamVR Always on Top",
 	"Settings_StatusWindowMinimizeToTray_Text": "SteamVR 상태 창을 최소화할 때 시스템 트레이 아이콘으로 최소화합니다",
 	"Settings_SuppressWarnings_Text": "SteamVR이 최소화 상태일 때 경고나 알림 표시 안 함",
 	"StatusCheckInterval_Never": "사용 안 함",
 	"StatusCheckInterval_Normal": "보통(1초)",
 	"StatusCheckInterval_Often": "자주(100밀리초)",
 	"StatusCheckInterval_Seldom": "가끔(5초)",
-	"Settings_ThumbstickDeadzone_Text": "엄지스틱 데드존",
 	"Settings_KnockKnock_Button": "똑똑",
 	"Settings_KnockKnock_Desc": "VR 외부에 있는 사람들이 사용자를 부르는 것을 허용하며 표시해줍니다",
 	"Settings_CreateSystemReport_Button": "시스템 보고서 작성",
@@ -113,28 +124,30 @@
 	"Settings_Chaperone_Style_3": "고급",
 	"Settings_Chaperone_Style_4": "바닥 전용",
 	"Settings_Video_RefreshRate_Header": "새로고침 속도",
-	"Settings_Video_RefreshRate_HzSuffix": " hz",
+	"Settings_Video_RefreshRate_HzSuffix": " Hz",
+	"Settings_Video_RefreshRate_Label_Hz": "새로고침 속도(Hz)",
 	"Settings_Video_RefreshRate_NotFound": "사용 중인 HMD에서 추가적인 새로고침 속도가 지원되지만 그래픽 드라이버에서는 감지되지 않습니다. 헤드셋 펌웨어를 확인하고 그래픽 드라이버가 최신 버전인지 확인해 주세요.",
 	"Settings_Video_RefreshRate_NotAvailableExtended": "사용 중인 HMD에서 추가적인 새로고침 속도가 지원되지만, HMD가 확장 모드일 때는 SteamVR이 새로고침 속도를 관리할 수 없습니다.",
 	"Settings_Video_RefreshRate_EnableDirectModeAction": "직접 모드 활성화",
-	"Settings_Video_RestartNotice": "지금 대기 중인 변경 사항은 SteamVR을 다시 시작하면 적용됩니다.",
-	"Settings_Video_RestartAction": "SteamVR을 다시 시작하세요",
+	"Settings_Video_RefreshRate_OneSupported": "Only one refresh rate is supported for your system.",
 	"Settings_Video_AppResFooter": "각 눈에 렌더링되는 현재 설정: %1$s",
 	"Settings_Advanced_MotionSmoothing_Header": "모션 스무딩",
 	"Settings_Advanced_MotionSmoothing_Description": "실행 중인 애플리케이션이 감당할 수 없는 경우, 양호한 환경을 유지하기 위해 새로운 프레임을 통합합니다.",
-	"Settings_Advanced_MotionSmoothing": "모션 스무딩 활성화",
 	"Settings_Advanced_MotionSmoothing_Disabled": "모션 스무딩에는 비동기 중복 프로젝션 지원이 필요합니다.",
-	"Settings_Advanced_Supersampling_Header": "애플리케이션 해상도",
+	"Settings_Advanced_Supersampling_Auto": "Auto",
+	"Settings_Advanced_Supersampling_Custom": "Custom",
+	"Settings_Advanced_Supersampling_Header": "Render Resolution",
 	"Settings_Advanced_Supersampling_Warning": "아래의 설정은 자동 설정을 재정의하고 모든 애플리케이션에 영향을 미칩니다. 특정 애플리케이션의 해상도 변경은 '애플리케이션 설정'에서 진행하세요.",
+	"Settings_Advanced_Supersampling_WidthByHeight": "%1$s × %2$s",
 	"Settings_Advanced_SupersamplingManualOverride": "해상도 변경 사항 활성화",
+	"Settings_Advanced_Supersampline_ResolutionPerEye": "Resolution Per Eye",
 	"Explanation_Supersampling_Header": "SteamVR이 사용자의 GPU 성능에 맞춰 자동으로 애플리케이션의 해상도를 설정합니다.",
 	"Explanation_Supersampling": "*일부 애플리케이션은 설정을 적용하려면 다시 시작해야 합니다.",
 	"Explanation_SupersamplingFiltering": "슈퍼샘플링 필터링 옵션:",
-	"Settings_PerApplication_Header": "특정 애플리케이션에 대한 고유한 렌더링 설정 생성하기",
+	"Explanation_Supersampling_ResolutionPerEye": "Resolution Per Eye",
 	"Settings_PerApplication_ChooseApplication": "애플리케이션 선택",
-	"Settings_PerApplication_AppResTitle": " ",
-	"Settings_PerApplication_AppResHeader": "이 설정은 왼쪽의 비디오 탭에 표시되는 현재 애플리케이션 전체 해상도 설정의 배수입니다. 설정을 적용하려면 애플리케이션을 다시 시작해야 합니다(기본값 100%).",
-	"Settings_PerApplication_AppResFooter": "각 눈에 렌더링되는 현재 설정: %1$s",
+	"Settings_PerApplication_AppResTitle": "Custom Resolution Multiplier",
+	"Settings_PerApplication_AppResHeader": "This setting is a multiplier on top of the current global application resolution setting on the %1$s tab to the left. This application may need to be restarted for settings to take effect. (Default is 100%)",
 	"Settings_PerApplication_OverlayVisibleHeader": "오버레이 애플리케이션은 SteamVR 대시보드의 탭으로 사용할 수 있습니다.",
 	"Settings_PerApplication_OverlayVisibleCheckbox": "SteamVR 실행 시 이 오버레이 애플리케이션을 시작합니다.",
 	"Settings_PerApplication_DashboardSuffix": "(오버레이 애플리케이션)",
@@ -147,18 +160,26 @@
 	"Settings_PerApplication_MotionSmoothing_AlwaysOn": "항상 켜기(강제)",
 	"Settings_PerApplication_MotionSmoothing_AlwaysOn_Desc": "경고: 애플리케이션이 절반의 프레임 속도로 실행됩니다",
 	"Settings_PerApplication_MotionSmoothing_Checkbox": "이 애플리케이션에서 모션 스무딩 활성화하기",
+	"Settings_PerApplication_Reprojection_Header": "Reprojection",
+	"Settings_PerApplication_Reprojection_Checkbox": "Use Legacy Reprojection Mode",
+	"Settings_PerApplication_Reprojection_Description": "Checking this option will disable asynchronous reprojection for this title.",
+	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Override global refresh rate setting for this application",
+	"Settings_Perapplication_RefreshRateOverride_Description": "Checking this option will allow specifying a different refresh rate from the global setting for this application.",
 	"Settings_MimeTypes_Pancake_Header": "2D 애플리케이션을 실행하는 데 사용할 애플리케이션 선택",
 	"Settings_Camera_EnableCamera": "카메라 활성화",
 	"Settings_Camera_AllowCameraInDashboard": "대시보드에 카메라 표시",
 	"Settings_Camera_AllowCameraInDashboard_Desc": "대시보드가 표시되면 컨트롤러에 연결된 카메라 윈도우를 켭니다.",
-	"Settings_Camera_AllowCameraForChaperoneBounds": "카메라를 사용해 샤프롱 경계를 확장합니다",
+	"Settings_Camera_AllowCameraForChaperoneBounds": "Show Camera at Chaperone Edge",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
-	"Settings_Camera_AllowCameraForRoomView": "방 보기 활성화(시스템 버튼 더블 클릭)",
+	"Settings_Camera_AllowCameraForRoomView": "Enable Room View",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "언제든지 시스템 버튼을 두 번 누르면 '방 보기'를 이용할 수 있습니다",
 	"Settings_Camera_Compatibility": "카메라 비율",
+	"Settings_Camera_Rate_Hz": "카메라 속도(Hz)",
 	"Settings_Camera_CompatibilityExplanation": "추적이 끊기는 현상이 생긴다면 카메라 비율을 낮추거나, 카메라를 끄거나, 다른 USB 포트를 사용해 보세요.",
 	"Advanced_Appearance": "표시",
 	"Settings_Appearance_Background": "배경",
+	"Settings_Appearance_Background_NoSteam": "Launch Steam to see any any additional backgrounds.",
+	"Settings_Appearance_Background_Select": "Change Background",
 	"Settings_Appearance_BackgroundDesc": "기본 공간을 위한 배경을 고르세요",
 	"Settings_Appearance_UseDomeProjection": "돔 프로젝션 사용",
 	"Settings_Appearance_UseDomeProjectionDesc": "배경 이미지의 투영 스타일을 변경합니다. 어떤 배경에서는 몰입감을 더 높이기 위해 이 기능을 사용하기도 합니다. 사용 중인 배경에 왜곡 현상이 나타나면 이 기능을 사용해 보세요.",
@@ -166,24 +187,34 @@
 	"Settings_Appearance_DomeCameraHeightDesc": "배경에 대한 카메라의 높이 조정",
 	"Settings_Appearance_DomeCameraRadius": "돔 반경",
 	"Settings_Appearance_DomeCameraRadiusDesc": "돔의 크기를 변경합니다.",
-	"Settings_Appearance_PlayAreaColor": "플레이 구역",
+	"Settings_Appearance_ResetDomeProjectionSettings": "Reset Dome Projection to Default",
 	"Settings_Appearance_PlayAreaColorDesc": "플레이 구역의 스타일을 조정하세요. 이것은 게임을 불러올 때 또는 SteamVR Home 베타를 취소하면 표시됩니다",
+	"Settings_Appearance_PlayArea_FloorColor": "Play Area Floor Color",
 	"Settings_Appearance_MoreEnvironments": "SteamVR Home 환경 더 불러오기",
 	"Settings_Power_ReturnToWatchdogTimeout": "SteamVR 종료 대기 시간",
 	"Settings_Power_TurnOffScreensTimeout": "디스플레이 종료 대기 시간",
 	"Settings_Power_TurnOffControllersTimeout": "컨트롤러 종료 대기 시간",
 	"Settings_Power_ControllerOffOnExit": "SteamVR 종료 시 컨트롤러를 끄세요",
-	"Settings_General_DoNotDisturb_Text": "VR 사용 중에는 알림 표시 안 함",
+	"Settings_General_Notifications_Label": "Notifications",
+	"Settings_General_Notifications_Text": "Allow notifications while in VR",
 	"Settings_General_ShowBindingUI": "컨트롤러 바인딩 수정",
 	"Settings_General_ShowTrackerUI": "Vive 트래커 관리",
 	"Settings_General_Cancel": "취소",
 	"Settings_General_Confirm": "확인",
+	"Settings_General_Close": "Close",
 	"Settings_General_CalibrateThumbstick": "조정",
+	"Settings_General_CalibrateThumbstick_ConnectAController": "Connect a controller with a thumbstick.",
 	"Settings_General_NotEnoughSamples": "조정을 완료하려면 최소 %1$s회 이상 엄지스틱을 누르세요.",
-	"Settings_General_InviteMoreSamples": "계산된 각도가 %1$s입니다. 계속 눌러 값을 조정하거나 확인을 눌러 이 조정값을 적용하세요.",
-	"Settings_General_LeftThumbstickAngle": "왼쪽 엄지스틱 각도: %1$s도",
-	"Settings_General_RightThumbstickAngle": "왼쪽 엄지스틱 각도: %1$s도",
-	"Settings_Dashboard_ShowProgressIndicator": "길게 누르기 동작 시 진행률 표시",
+	"Settings_General_InviteMoreSamples": "Calculated angle of %1$s°. Keep pressing up to refine that value or press Confirm to accept this calibration.",
+	"Settings_General_LeftThumbstickAngle": "Left Thumbstick Angle: %1$s°",
+	"Settings_General_RightThumbstickAngle": "Right Thumbstick Angle: %1$s°",
+	"Settings_General_LeftThumbstickAngle_NoValue": "Left Thumbstick Angle",
+	"Settings_General_RightThumbstickAngle_NoValue": "Right Thumbstick Angle",
+	"Settings_Dashboard_ShowProgressIndicator": "Long-press progress indicator",
+	"Settings_Dashboard_Position": "Dashboard Position",
+	"Settings_Classic": "Classic",
+	"Settings_Near": "Near (beta)",
+	"Settings_DesktopScale": "Desktop Scale",
 	"SettingsTime_5s": "5초",
 	"SettingsTime_30s": "30초",
 	"SettingsTime_1m": "1분",
@@ -195,12 +226,63 @@
 	"SettingsTime_Never": "사용 안 함",
 	"Settings_Appearance_CycleBackgroundImageTimeSec": "배경 변경 대기 시간:",
 	"Settings_Chaperone_BoundsColor": "색상",
-	"Settings_Chaperone_BoundsAlpha": "알파",
+	"Settings_Chaperone_BoundsTransparency": "Transparency",
+	"Settings_Chaperone_Color": "Chaperone Color",
 	"Settings_Appearance_Controller": "컨트롤러 모델 변경",
 	"Settings_Appearance_Base": "베이스 스테이션 모델 변경",
 	"Settings_Appearance_Environment": "홈 환경 변경",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOn": "바닥 경계 항상 표시",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOnDesc": " ",
-	"Settings_Connecting": "SteamVR을 시작하는 중...",
-	"Settings_ResetToDefault": "기본 설정으로 초기화"
+	"Settings_Loading": "Loading...",
+	"Settings_ResetToDefault": "기본 설정으로 초기화",
+	"Settings_ResetPageToDefault": "Reset Page To Default",
+	"Settings_ToggleButton_On": "On",
+	"Settings_ToggleButton_Off": "Off",
+	"Settings_ToggleButton_Disable": "Disable",
+	"Settings_ToggleButton_Enable": "Enable",
+	"Settings_Header_SteamVR": "SteamVR Settings",
+	"Settings_CameraTest": "Test camera and performance",
+	"Settings_StartCameraTest": "Start Test",
+	"Settings_StopCameraTest": "Stop Test",
+	"CameraTest_CheckingCamera": "Checking camera...",
+	"CameraTest_CheckingTracking": "Checking tracking with camera...",
+	"CameraTest_CameraFailed": "Camera communication failed",
+	"CameraTest_TrackingFailed": "Tracking failed with camera enabled",
+	"CameraTest_Success": "Camera Test Passed",
+	"CameraTestStatus_Evaluating": "Checking",
+	"CameraTestStatus_Success": "Success",
+	"CameraTestStatus_Failure": "Failed",
+	"Settings_CameraChaperone_RoomViewMode": "Room View Camera Mode",
+	"CameraRoomViewMode_EdgeA": "Colored Edges",
+	"CameraRoomViewMode_EdgeB": "Colored Ghosts",
+	"CameraRoomViewMode_VideoTranslucent": "Translucent Pass-Through",
+	"CameraRoomViewMode_VideoOpaque": "Opaque Pass-Through",
+	"Settings_MustRestart_Description": "SteamVR must be restarted for some changes to take effect.",
+	"Settings_MustRestart_RestartSteamVR_Button": "SteamVR 다시 시작",
+	"Settings_NotSupported": "Not Supported",
+	"Settings_AdvancedSettings": "Advanced Settings",
+	"Settings_Show": "Show",
+	"Settings_Hide": "Hide",
+	"Settings_ViveTracker": "Vive Tracker",
+	"Settings_ViveTrackers": "Vive Trackers",
+	"Settings_ViveTracker_Role": "Tracker Role",
+	"Settings_ViveTracker_Hand": "Hand",
+	"Settings_ViveTracker_Identify_NotConnected": "Vive Tracker isn't connected.",
+	"Settings_ViveTracker_Identify_NotIdentifiable": "Vive Tracker isn't capable of identification.",
+	"Settings_ViveTracker_Connected": "Connected",
+	"Settings_ViveTracker_Disconnected": "Disconnected",
+	"Settings_PerApplication_VideoSettings": "Per-Application Video Settings",
+	"Settings_ChooseStartupOverlayApps": "Choose Startup Overlay Apps",
+	"Settings_StartTheseOverlayAppsOnLaunch": "Start These Overlay Apps On Launch:",
+	"Settings_ActiveController": "Active Controller",
+	"Settings_EditBinding": "Edit This Binding",
+	"Settings_EditBinding_ChooseAnother": "Choose Another",
+	"Settings_ShowLegacyBindingsEditor": "Show Legacy Bindings Editor",
+	"Settings_ManageVideoSettingsForApp": "Manage Video Settings For:",
+	"Settings_ManageControllerBindingSettingsForApp": "Manage Controller Bindings For:",
+	"Settings_ActiveControllerBinding": "Active Controller Binding",
+	"Settings_ActiveBinding": "Active Binding",
+	"Settings_ShowThumbstickSettings": "Edit Thumbstick Settings",
+	"Settings_ThumbstickSettings": "Thumbstick Settings",
+	"Settings_Number_Selected": "%1$s Selected"
 }
