--- a/resources/webinterface/dashboard/localization/vrmonitor_schinese.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_schinese.json
@@ -4,6 +4,17 @@
 	"VRMonitor_Nav_Settings": "设置",
 	"VRMonitor_Nav_Help": "帮助",
 	"VRMonitor_Nav_Developer": "开发者",
+	"Settings_ControllerSettings": "Controller Settings",
+	"Settings_Controller_ShowBindingCallouts": "Show Binding On Controllers",
+	"Settings_Controller_ShowBindingCalloutsInVR": "Show Binding On Controllers in VR",
+	"Settings_Controller_AdvancedControllerSettings": "Manage Controller Bindings",
+	"Settings_Controller_ControllerBindingPrompt": "Controller Binding",
+	"Settings_Controller_DefaultBinding": "Default",
+	"Settings_Controller_CustomBinding": "Custom",
+	"Settings_ThumbstickDeadzone_Text": "Thumbstick Deadzone",
+	"Settings_ThumbstickDeadzone_Desc": "Adjust the deadzone on all thumbsticks.",
+	"Settings_Loading_CurrentBinding": "Loading current binding...",
+	"Settings_NeedSteamTo_ViewAndEditBindings": "Launch Steam to view and edit bindings.",
 	"VRMonitor_Overview_SystemStatus_Title": "系统状态",
 	"VRMonitor_Overview_DeviceStatus_Title": "设备状态",
 	"VRMonitor_Overview_Notifications_Title": "通知",
@@ -29,15 +40,17 @@
 	"VRMonitor_DevNav_Console": "控制台",
 	"VRMonitor_DevNav_RoomOverview": "房间概览",
 	"VRMonitor_DevNav_Files": "文件",
-	"Settings_Audio_On": "使用 SteamVR 时…",
-	"Settings_Audio_AudioPlay": "设置播放设备到",
-	"Settings_Audio_AudioRecord": "将录制设备设置为",
-	"Settings_Audio_Off": "当 SteamVR 退出时...",
-	"Settings_Audio_HDMIGain": "在 Vive HDMI 音频上启用增益衰减",
-	"Settings_Audio_LeaveAlone": "（不要更改设备）",
-	"Settings_Audio_AudioMirrorPlay": "将音频映射到设备",
-	"Settings_Audio_AudioMirrorUnsupported": "此平台不支持音频映射",
-	"Settings_Audio_NoMirror": "（不要映射）",
+	"Settings_SelectAnOption": "Select an option...",
+	"Settings_BluetoothSettings": "Bluetooth Settings",
+	"Settings_BaseStationSettings": "Base Station Settings",
+	"Settings_Audio_Playback_Automatic_Label": "Audio output device",
+	"Settings_Audio_Recording_Automatic_Label": "Audio input device",
+	"Settings_Audio_Headset": "Headset",
+	"Settings_Audio_Manual": "Manual",
+	"Settings_Audio_Mirroring_Label": "Audio mirroring",
+	"Settings_Audio_Default": "Default",
+	"Settings_Audio_Current_Setting_Unknown": "(Currently selected device is not present)",
+	"Settings_Audio_HDMIGain": "Gain reduction on VIVE HDMI Audio",
 	"Settings_SectionTitle_Advanced": "高级",
 	"Settings_SectionTitle_Developer": "开发者",
 	"Settings_SectionTitle_General": "通用",
@@ -47,14 +60,15 @@
 	"Settings_SectionTitle_Camera": "摄像头",
 	"Settings_SectionTitle_Bluetooth": "蓝牙",
 	"Settings_SectionTitle_Power": "电源",
-	"Settings_SectionTitle_Internal": "内部",
+	"Settings_SectionTitle_StartupShutdown": "Startup / Shutdown",
 	"Settings_SectionTitle_Home": "主页",
-	"Settings_SectionTitle_Chaperone": "Chaperone 导护系统",
+	"Settings_SectionTitle_PlayArea": "Play Area",
 	"Settings_SectionTitle_BaseStation": "定位器",
+	"Settings_SectionTitle_Controller": "Controllers",
 	"Advanced_AllowSavingOfTimingInfo": "允许保存定时信息",
 	"Advanced_AutoSaveTimingInfoOnExit": "退出时自动保存定时信息",
 	"Settings_EnableWebHelperDebugger": "启用网络帮助调试工具",
-	"Settings_EnableWebHelperDebuggerDesc": "启用调试服务器，用于在嵌入式 Chromium 页面中附加 Chromium 开发工具和调试工具。需要重启 SteamVR。",
+	"Settings_EnableWebHelperDebuggerDesc": "Enables debugging server for attaching Chromium dev tools and debugger to embedded Chromium pages. It's always enabled on Perforce builds.",
 	"Advanced_PerfGraphInHMD": "显示头戴式显示器的 GPU 性能图",
 	"Advanced_SaveFrameDataNow": "保存帧数据",
 	"Explanation_DisableEnhancedPowerManagement": "如果您遇到不明原因的定位丢失或无法配对无线控制器，禁用 SteamVR USB 设备的 Windows 增强电源管理。",
@@ -70,38 +84,35 @@
 	"MenuAction_ResetDismissableWarnings": "重置警告",
 	"MenuAction_SetConfigDirectory": "设置配置路径",
 	"MenuAction_SetLogDirectory": "设置日志路径",
-	"Settings_Advanced_AllowSupersampleFiltering": "启用高级超级采样过滤",
+	"Settings_Advanced_AllowSupersampleFiltering": "Advanced Supersample Filtering",
 	"Settings_Advanced_Paths_Header": "路径",
 	"Settings_Advanced_Reset_Header": "重置",
 	"Settings_Advanced_Status_Header": "状态检测",
-	"Settings_ArcadeMode": "启用街机模式",
+	"Settings_ShowSettingsInDashboard": "Settings (VR Dashboard)",
 	"Settings_CheckForSteam": "检查 Steam",
 	"Settings_DebugInputBindings": "在输入按键设置用户界面启动调试选项",
-	"Settings_DoNotFadeToGrid": "应用挂起时不淡出至网格",
-	"Settings_EnableDashboard": "启用 VR 主面板",
-	"Settings_HomeAppCheck": "使用 SteamVR 家",
+	"Settings_FadeToGrid": "Fade To Grid on app hang",
+	"Settings_EnableDashboard": "VR Dashboard",
+	"Settings_HomeAppCheck": "SteamVR Home",
 	"Settings_HomeAppDesc": "享受虚拟环境、社交功能，以及更多精彩。",
 	"Settings_LargeSpace": "大型空间",
 	"Settings_LockedModeCheck": "锁定模式",
 	"Settings_LockedModeDesc": "电脑被锁定时允许渲染至头戴式显示器。",
+	"Settings_PauseOnStandby": "Pause VR when headset is idle",
+	"Settings_PauseOnLocked": "Pause VR when computer is locked",
 	"Settings_MediumSpace": "中型空间",
 	"Settings_NightModeCheck": "夜间模式",
 	"Settings_NightModeDesc": "使头戴式显示器变暗直至凌晨 5 点（或直至 SteamVR 重启）。",
-	"Settings_NotificationDoNotDisturb_Info": "当启用“请勿打扰”时，传入的通知将被拦截。",
-	"Settings_NotificationDoNotDisturb_Text": "请勿打扰",
-	"Settings_PauseOnStandby": "当头戴式显示器闲置时暂停渲染",
 	"Settings_ShowPlaylistMenu": "显示运行列表菜单",
 	"Settings_SmallSpace": "小型空间",
-	"Settings_StartSteamVROnAppLaunch": "启动一个应用程序时同时启动 SteamVR",
 	"Settings_StatusWindowAlwaysOnTop_Info": " ",
-	"Settings_StatusWindowAlwaysOnTop_Text": "始终置顶",
+	"Settings_StatusWindowAlwaysOnTop_Text": "SteamVR Always on Top",
 	"Settings_StatusWindowMinimizeToTray_Text": "最小化时将 SteamVR 状态最小化至系统任务栏",
 	"Settings_SuppressWarnings_Text": "SteamVR 状态处于最小化时拦截警告和通知",
 	"StatusCheckInterval_Never": "从不",
 	"StatusCheckInterval_Normal": "正常（1 秒）",
 	"StatusCheckInterval_Often": "经常（100 毫秒）",
 	"StatusCheckInterval_Seldom": "很少（5 秒）",
-	"Settings_ThumbstickDeadzone_Text": "Thumbstick Deadzone",
 	"Settings_KnockKnock_Button": "咚咚",
 	"Settings_KnockKnock_Desc": "此功能可让 VR 之外的人引起头戴式显示器用户的注意。",
 	"Settings_CreateSystemReport_Button": "创建系统报告",
@@ -112,29 +123,31 @@
 	"Settings_Chaperone_Style_2": "正方形",
 	"Settings_Chaperone_Style_3": "高级",
 	"Settings_Chaperone_Style_4": "仅限地板",
-	"Settings_Video_RefreshRate_Header": "Refresh Rate",
-	"Settings_Video_RefreshRate_HzSuffix": " hz",
+	"Settings_Video_RefreshRate_Header": "刷新频率",
+	"Settings_Video_RefreshRate_HzSuffix": " Hz",
+	"Settings_Video_RefreshRate_Label_Hz": "Refresh Rate (Hz)",
 	"Settings_Video_RefreshRate_NotFound": "Additional refresh rates are supported by your HMD, but were not detected by the graphics driver. Please verify your headset firmware and graphics drivers are up to date.",
 	"Settings_Video_RefreshRate_NotAvailableExtended": "Additional refresh rates are supported by your HMD, but SteamVR cannot manage refresh rates when the HMD is in extended mode.",
-	"Settings_Video_RefreshRate_EnableDirectModeAction": "Enable Direct Mode",
-	"Settings_Video_RestartNotice": "This pending change will take effect once you restart SteamVR.",
-	"Settings_Video_RestartAction": "Restart SteamVR",
+	"Settings_Video_RefreshRate_EnableDirectModeAction": "启用直连模式",
+	"Settings_Video_RefreshRate_OneSupported": "Only one refresh rate is supported for your system.",
 	"Settings_Video_AppResFooter": "当前设置以 %1$s 渲染每只眼睛",
 	"Settings_Advanced_MotionSmoothing_Header": "运动平滑",
 	"Settings_Advanced_MotionSmoothing_Description": "正在运行的应用程序无法保持帧率时，SteamVR 会合成新帧以保持良好体验。",
-	"Settings_Advanced_MotionSmoothing": "启用运动平滑",
 	"Settings_Advanced_MotionSmoothing_Disabled": "运动平滑需要异步再投影的支持。",
-	"Settings_Advanced_Supersampling_Header": "应用程序分辨率",
+	"Settings_Advanced_Supersampling_Auto": "Auto",
+	"Settings_Advanced_Supersampling_Custom": "Custom",
+	"Settings_Advanced_Supersampling_Header": "Render Resolution",
 	"Settings_Advanced_Supersampling_Warning": "以下设置替代自动设置并影响所有应用程序。要更改特定应用程序的分辨率，请访问“应用程序设置”。",
+	"Settings_Advanced_Supersampling_WidthByHeight": "%1$s × %2$s",
 	"Settings_Advanced_SupersamplingManualOverride": "启用分辨率调整",
+	"Settings_Advanced_Supersampline_ResolutionPerEye": "Resolution Per Eye",
 	"Explanation_Supersampling_Header": "SteamVR 会根据您 GPU 的性能自动设置应用程序分辨率。",
 	"Explanation_Supersampling": "*某些应用程序也许需要重启，以使设置生效。",
 	"Explanation_SupersamplingFiltering": "超级采样过滤选项：",
-	"Settings_PerApplication_Header": "为特定应用程序创建独有渲染设置",
+	"Explanation_Supersampling_ResolutionPerEye": "Resolution Per Eye",
 	"Settings_PerApplication_ChooseApplication": "选择一个应用程序",
-	"Settings_PerApplication_AppResTitle": " ",
-	"Settings_PerApplication_AppResHeader": "此设置为左侧“视频”选项卡中当前全局应用程序分辨率设置的倍数。此应用程序可能需要重新启动，以使设置生效。（默认为 100%）",
-	"Settings_PerApplication_AppResFooter": "当前设置以 %1$s 渲染每只眼睛",
+	"Settings_PerApplication_AppResTitle": "Custom Resolution Multiplier",
+	"Settings_PerApplication_AppResHeader": "This setting is a multiplier on top of the current global application resolution setting on the %1$s tab to the left. This application may need to be restarted for settings to take effect. (Default is 100%)",
 	"Settings_PerApplication_OverlayVisibleHeader": "在 SteamVR 主面板中，界面应用程序可作为选项卡使用。",
 	"Settings_PerApplication_OverlayVisibleCheckbox": "SteamVR 启动时开始此界面应用程序。",
 	"Settings_PerApplication_DashboardSuffix": "（界面应用程序）",
@@ -147,18 +160,26 @@
 	"Settings_PerApplication_MotionSmoothing_AlwaysOn": "强制始终开启",
 	"Settings_PerApplication_MotionSmoothing_AlwaysOn_Desc": "警告：应用将以原先帧率的一半运行",
 	"Settings_PerApplication_MotionSmoothing_Checkbox": "为此应用程序启用运动平滑功能",
+	"Settings_PerApplication_Reprojection_Header": "Reprojection",
+	"Settings_PerApplication_Reprojection_Checkbox": "Use Legacy Reprojection Mode",
+	"Settings_PerApplication_Reprojection_Description": "Checking this option will disable asynchronous reprojection for this title.",
+	"Settings_PerApplication_RefreshRateOverride_Checkbox": "Override global refresh rate setting for this application",
+	"Settings_Perapplication_RefreshRateOverride_Description": "Checking this option will allow specifying a different refresh rate from the global setting for this application.",
 	"Settings_MimeTypes_Pancake_Header": "选择一个要在其中启动 2D 应用程序的应用程序",
 	"Settings_Camera_EnableCamera": "启动摄像头",
 	"Settings_Camera_AllowCameraInDashboard": "在主面板中显示摄像头",
 	"Settings_Camera_AllowCameraInDashboard_Desc": "主面板开启时，打开连接到您控制器上的摄像头窗口。",
-	"Settings_Camera_AllowCameraForChaperoneBounds": "使用摄像头增强 Chaperone 导护系统边界",
+	"Settings_Camera_AllowCameraForChaperoneBounds": "Show Camera at Chaperone Edge",
 	"Settings_Camera_AllowCameraForChaperoneBounds_Desc": " ",
-	"Settings_Camera_AllowCameraForRoomView": "启用房间视角（双击系统键）",
+	"Settings_Camera_AllowCameraForRoomView": "Enable Room View",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "通过双击系统键来随时访问房间视角",
 	"Settings_Camera_Compatibility": "摄像头频率",
+	"Settings_Camera_Rate_Hz": "Camera Rate (Hz)",
 	"Settings_Camera_CompatibilityExplanation": "如果您在使用过程中出现定位丢失的情况，您可以将摄像头频率调低、禁用摄像头、或是换用其他 USB 端口。",
 	"Advanced_Appearance": "外观",
 	"Settings_Appearance_Background": "背景",
+	"Settings_Appearance_Background_NoSteam": "Launch Steam to see any any additional backgrounds.",
+	"Settings_Appearance_Background_Select": "Change Background",
 	"Settings_Appearance_BackgroundDesc": "为默认空间选择背景",
 	"Settings_Appearance_UseDomeProjection": "使用圆顶投影",
 	"Settings_Appearance_UseDomeProjectionDesc": "改变背景图像的投影样式。某些背景使用此功能来提供更加身临其境的体验。如果您选择的背景看起来有些扭曲，请尝试启用此功能。",
@@ -166,24 +187,34 @@
 	"Settings_Appearance_DomeCameraHeightDesc": "调整摄像头相对于背景的高度",
 	"Settings_Appearance_DomeCameraRadius": "圆顶半径",
 	"Settings_Appearance_DomeCameraRadiusDesc": "更改圆顶的大小。",
-	"Settings_Appearance_PlayAreaColor": "游玩范围",
+	"Settings_Appearance_ResetDomeProjectionSettings": "Reset Dome Projection to Default",
 	"Settings_Appearance_PlayAreaColorDesc": "调整您的游玩范围风格。您会在游戏加载时或已禁用 SteamVR 家测试版时看到此通知。",
+	"Settings_Appearance_PlayArea_FloorColor": "Play Area Floor Color",
 	"Settings_Appearance_MoreEnvironments": "获取更多 SteamVR 家环境",
 	"Settings_Power_ReturnToWatchdogTimeout": "在此之后退出 SteamVR：",
 	"Settings_Power_TurnOffScreensTimeout": "在此之后关闭显示：",
 	"Settings_Power_TurnOffControllersTimeout": "在此之后关闭控制器：",
 	"Settings_Power_ControllerOffOnExit": "退出 SteamVR 时关闭控制器",
-	"Settings_General_DoNotDisturb_Text": "在 VR 中时拦截通知",
+	"Settings_General_Notifications_Label": "Notifications",
+	"Settings_General_Notifications_Text": "Allow notifications while in VR",
 	"Settings_General_ShowBindingUI": "退出控制器按键设置",
 	"Settings_General_ShowTrackerUI": "管理 Vive 追踪器",
-	"Settings_General_Cancel": "Cancel",
-	"Settings_General_Confirm": "Confirm",
-	"Settings_General_CalibrateThumbstick": "Calibrate",
+	"Settings_General_Cancel": "取消",
+	"Settings_General_Confirm": "确认",
+	"Settings_General_Close": "Close",
+	"Settings_General_CalibrateThumbstick": "校准",
+	"Settings_General_CalibrateThumbstick_ConnectAController": "Connect a controller with a thumbstick.",
 	"Settings_General_NotEnoughSamples": "Please press up on the thumbstick at least %1$s more times to complete calibration.",
-	"Settings_General_InviteMoreSamples": "Calculated angle of %1$s degrees. Keep pressing up to refine that value or press Confirm to accept this calibration.",
-	"Settings_General_LeftThumbstickAngle": "Left Thumbstick Angle: %1$s degrees",
-	"Settings_General_RightThumbstickAngle": "Right Thumbstick Angle: %1$s degrees",
-	"Settings_Dashboard_ShowProgressIndicator": "为长按操作显示进度指示器",
+	"Settings_General_InviteMoreSamples": "Calculated angle of %1$s°. Keep pressing up to refine that value or press Confirm to accept this calibration.",
+	"Settings_General_LeftThumbstickAngle": "Left Thumbstick Angle: %1$s°",
+	"Settings_General_RightThumbstickAngle": "Right Thumbstick Angle: %1$s°",
+	"Settings_General_LeftThumbstickAngle_NoValue": "Left Thumbstick Angle",
+	"Settings_General_RightThumbstickAngle_NoValue": "Right Thumbstick Angle",
+	"Settings_Dashboard_ShowProgressIndicator": "Long-press progress indicator",
+	"Settings_Dashboard_Position": "Dashboard Position",
+	"Settings_Classic": "Classic",
+	"Settings_Near": "Near (beta)",
+	"Settings_DesktopScale": "Desktop Scale",
 	"SettingsTime_5s": "5 秒",
 	"SettingsTime_30s": "30 秒",
 	"SettingsTime_1m": "1 分钟",
@@ -195,12 +226,63 @@
 	"SettingsTime_Never": "从不",
 	"Settings_Appearance_CycleBackgroundImageTimeSec": "在此之后更改背景：",
 	"Settings_Chaperone_BoundsColor": "颜色",
-	"Settings_Chaperone_BoundsAlpha": "Alpha",
+	"Settings_Chaperone_BoundsTransparency": "Transparency",
+	"Settings_Chaperone_Color": "Chaperone Color",
 	"Settings_Appearance_Controller": "更改您的控制器模型",
 	"Settings_Appearance_Base": "更改您的定位器模型",
 	"Settings_Appearance_Environment": "更改您的家环境",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOn": "总是显示地板边界",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOnDesc": " ",
-	"Settings_Connecting": "正在等待 SteamVR 启动…",
-	"Settings_ResetToDefault": "重置为默认值"
+	"Settings_Loading": "Loading...",
+	"Settings_ResetToDefault": "重置为默认值",
+	"Settings_ResetPageToDefault": "Reset Page To Default",
+	"Settings_ToggleButton_On": "On",
+	"Settings_ToggleButton_Off": "Off",
+	"Settings_ToggleButton_Disable": "Disable",
+	"Settings_ToggleButton_Enable": "Enable",
+	"Settings_Header_SteamVR": "SteamVR Settings",
+	"Settings_CameraTest": "Test camera and performance",
+	"Settings_StartCameraTest": "Start Test",
+	"Settings_StopCameraTest": "Stop Test",
+	"CameraTest_CheckingCamera": "Checking camera...",
+	"CameraTest_CheckingTracking": "Checking tracking with camera...",
+	"CameraTest_CameraFailed": "Camera communication failed",
+	"CameraTest_TrackingFailed": "Tracking failed with camera enabled",
+	"CameraTest_Success": "Camera Test Passed",
+	"CameraTestStatus_Evaluating": "Checking",
+	"CameraTestStatus_Success": "Success",
+	"CameraTestStatus_Failure": "Failed",
+	"Settings_CameraChaperone_RoomViewMode": "Room View Camera Mode",
+	"CameraRoomViewMode_EdgeA": "Colored Edges",
+	"CameraRoomViewMode_EdgeB": "Colored Ghosts",
+	"CameraRoomViewMode_VideoTranslucent": "Translucent Pass-Through",
+	"CameraRoomViewMode_VideoOpaque": "Opaque Pass-Through",
+	"Settings_MustRestart_Description": "SteamVR must be restarted for some changes to take effect.",
+	"Settings_MustRestart_RestartSteamVR_Button": "Restart SteamVR",
+	"Settings_NotSupported": "Not Supported",
+	"Settings_AdvancedSettings": "Advanced Settings",
+	"Settings_Show": "Show",
+	"Settings_Hide": "Hide",
+	"Settings_ViveTracker": "Vive Tracker",
+	"Settings_ViveTrackers": "Vive Trackers",
+	"Settings_ViveTracker_Role": "Tracker Role",
+	"Settings_ViveTracker_Hand": "Hand",
+	"Settings_ViveTracker_Identify_NotConnected": "Vive Tracker isn't connected.",
+	"Settings_ViveTracker_Identify_NotIdentifiable": "Vive Tracker isn't capable of identification.",
+	"Settings_ViveTracker_Connected": "Connected",
+	"Settings_ViveTracker_Disconnected": "Disconnected",
+	"Settings_PerApplication_VideoSettings": "Per-Application Video Settings",
+	"Settings_ChooseStartupOverlayApps": "Choose Startup Overlay Apps",
+	"Settings_StartTheseOverlayAppsOnLaunch": "Start These Overlay Apps On Launch:",
+	"Settings_ActiveController": "Active Controller",
+	"Settings_EditBinding": "Edit This Binding",
+	"Settings_EditBinding_ChooseAnother": "Choose Another",
+	"Settings_ShowLegacyBindingsEditor": "Show Legacy Bindings Editor",
+	"Settings_ManageVideoSettingsForApp": "Manage Video Settings For:",
+	"Settings_ManageControllerBindingSettingsForApp": "Manage Controller Bindings For:",
+	"Settings_ActiveControllerBinding": "Active Controller Binding",
+	"Settings_ActiveBinding": "Active Binding",
+	"Settings_ShowThumbstickSettings": "Edit Thumbstick Settings",
+	"Settings_ThumbstickSettings": "Thumbstick Settings",
+	"Settings_Number_Selected": "%1$s Selected"
 }
