--- a/resources/webinterface/dashboard/localization/webhelper_greek.json
+++ b/resources/webinterface/dashboard/localization/webhelper_greek.json
@@ -17,7 +17,7 @@
 	"PowerMenuResetSeatedPosition": "Επαναφορά θέσης καθίσματος",
 	"PowerMenuTurnOffController": "Απενεργοποίηση χειριστηρίου",
 	"PowerMenuQuitSceneApp": "Έξοδος από %1$s",
-	"PowerMenuQuitSceneApp_NoApp": "Exit App",
+	"PowerMenuQuitSceneApp_NoApp": "Έξοδος",
 	"PowerMenuExitVR": "Έξοδος από VR",
 	"PowerMenuCancel": "Άκυρο",
 	"PowerMenuHeader": "Μενού ενέργειας",
